CI images update

--- a/images/chan-5-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-5-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-10 00:08:59
 
 [search]
-lastsearch = 2024-07-31 13:27:04
+lastsearch = 2024-07-31 20:38:48
 
 [h5.lazada.vn]
 match = -11.1%%
@@ -22,9 +22,9 @@ title = Chăn Tuyết Nhung 5kg Giá Tốt T05/2024
 url = https://www.lazada.vn/tag/chan-tuyet-nhung-5kg/
 
 [tiki.vn]
-match = -3.7%%
-title = Chăn tuyết nhung hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=chăn tuyết nhung
+match = -18.5%%
+title = Chăn nhung tuyết dày 5kg hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=chăn nhung tuyết dày 5kg
 
 [demxanh.com]
 match = -18.5%%
@@ -37,9 +37,9 @@ title = Mền Tuyết NIN - Liac Snow
 url = https://ninhouse.vn/products/men-tuyet-nin-liac-snow
 
 [www.youtube.com]
-match = -29.6%%
-title = CHÂN GÀ RÚT XƯƠNG SỐT THÁI mềm giòn đậm vị, ăn là ...
-url = https://www.youtube.com/watch?v=vZ2hBBqGbU4
+match = -74.1%%
+title = Cựu Thủ tướng Thái Lan Thaksin được trả tự do - Tin thế giới ...
+url = https://www.youtube.com/watch?v=zGtjB2l6au4
 
 [baodaknong.vn]
 match = -7.4%%
@@ -102,9 +102,9 @@ title = Những điều cấm kỵ ở Thái Lan TUYỆT ĐỐI mà bạn cần 
 url = https://www.kosshop.vn/t/nhung-dieu-cam-ky-o-thai-lan.html
 
 [m.facebook.com]
-match = -40.7%%
-title = Hội Những Người Ở Ký Túc Xá Khu B - KTX ĐHQG TP.HCM
-url = https://m.facebook.com/groups/hoiktxkhub/posts/2402194470161018/
+match = -51.9%%
+title = Khi được hỏi về tình hình mang thai lần... - Hóng Hớt ...
+url = https://m.facebook.com/story.php/?story_fbid=886045900213984&id=100064257476549
 
 [vietbao.com]
 match = -59.3%%
@@ -275,4 +275,14 @@ url = https://vi.wikipedia.org/wiki/Thaksin_Shinawatra
 match = -48.1%%
 title = Tuyển Việt Nam: HLV Kim Sang Sik sắp đến lúc trổ tài
 url = https://www.vietnam.vn/tuyen-viet-nam-hlv-kim-sang-sik-sap-den-luc-tro-tai/
+
+[vn.loccitane.com]
+match = -48.1%%
+title = Kem Dưỡng Da Tay & Da Chân Trắng Min/Hand & Foot ...
+url = https://vn.loccitane.com/collections/cham-soc-da-tay-va-da-chan
+
+[www.baobaclieu.vn]
+match = -29.6%%
+title = Xử lý ô nhiễm môi trường từ các nguồn rác thải
+url = https://www.baobaclieu.vn/doi-song-xa-hoi/xu-ly-o-nhiem-moi-truong-tu-cac-nguon-rac-thai-van-thieu-cac-giai-phap-huu-hieu-96044.html
 
