--- a/images/bo-bon-mua-chun-chan-1602m/config.ini
+++ b/images/bo-bon-mua-chun-chan-1602m/config.ini
@@ -87,9 +87,9 @@ title = Tra cứu Danh mục Mã mục, Tiểu mục - BCTC
 url = https://baocaotaichinh.vn/ma-chuong-tieu-muc/
 
 [thuvienphapluat.vn]
-match = -76.9%%
-title = Quyết định 43/2016/QĐ-TTg Chương trình điều tra thống ...
-url = https://thuvienphapluat.vn/van-ban/Bo-may-hanh-chinh/Quyet-dinh-43-2016-QD-TTg-Chuong-trinh-dieu-tra-thong-ke-quoc-gia-326455.aspx?tab=1
+match = -88.5%%
+title = Quyết định 1602/QĐ-TLĐ 2017 Quy định Hình thức xử lý kỷ ...
+url = https://thuvienphapluat.vn/van-ban/Lao-dong-Tien-luong/Quyet-dinh-1602-QD-TLD-2017-Quy-dinh-Hinh-thuc-xu-ly-ky-luat-trong-to-chuc-cong-doan-447614.aspx
 
 [huyentuachua.dienbien.gov.vn]
 match = -80.8%%
