--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-07-31 15:29:40
+lastsearch = 2024-07-31 20:35:17
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -77,9 +77,9 @@ title = Toàn ngành BHXH tập trung chi trả lương hưu theo mức ...
 url = https://dangcongsan.vn/bao-hiem-xa-hoi-bao-hiem-y-te-vi-an-sinh-xa-hoi/tin-tuc/toan-nganh-bhxh-tap-trung-chi-tra-luong-huu-theo-muc-huong-moi-ngay-tu-ngay-dau-671442.html
 
 [shopee.vn]
-match = -100.0%%
-title = chiếu tre thái lan loại 1 , hàng có sẵn m2xm9, m5x m9 ...
-url = https://shopee.vn/chiếu-tre-thái-lan-loại-1-hàng-có-sẵn-m2xm9-m5x-m9-m8x2m-2mx2m2-i.264060043.8153444972
+match = -42.9%%
+title = chiếu trúc hạt vàng cước đỏ thái lan đủ kích cỡ
+url = https://shopee.vn/chiếu-trúc-hạt-vàng-cước-đỏ-thái-lan-đủ-kích-cỡ-i.194586860.3058965326
 
 [baohungyen.vn]
 match = -4.8%%
@@ -203,8 +203,8 @@ url = https://prtc.ninhthuan.gov.vn/portal/Pages/2024-6-21/HOI-NGHI-BAN-CHAP-HAN
 
 [baotintuc.vn]
 match = -128.6%%
-title = Lần đầu tiên có bộ tiêu chuẩn về sản phẩm dịch vụ bảo vệ ...
-url = https://baotintuc.vn/xa-hoi/lan-dau-tien-co-bo-tieu-chuan-ve-san-pham-dich-vu-bao-ve-tre-em-tren-moi-truong-mang-20240625125759983.htm
+title = Tuyên Quang, Bắc Kạn chủ động ứng phó với lũ quét, sạt lở
+url = https://baotintuc.vn/thoi-su/tuyen-quang-bac-kan-chu-dong-ung-pho-voi-lu-quet-sat-lo-20240731180546900.htm
 
 [baothainguyen.vn]
 match = -76.2%%
