--- a/images/vo-chan-ks-uc-20-230/config.ini
+++ b/images/vo-chan-ks-uc-20-230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-230.html
 lastopen = 2024-06-10 00:43:14
 
 [search]
-lastsearch = 2024-07-31 17:43:56
+lastsearch = 2024-07-31 20:42:39
 
 [www.dir.ca.gov]
 match = -28.6%%
@@ -12,9 +12,9 @@ title = Lien Claimants
 url = https://www.dir.ca.gov/ftproot/EAMSLienClaimants.txt
 
 [profiles.ucsf.edu]
-match = -15.0%%
-title = Matthew Cooperberg, MD, MPH
-url = https://profiles.ucsf.edu/matthew.cooperberg
+match = 0.0%%
+title = Joel Palefsky, MD
+url = https://profiles.ucsf.edu/joel.palefsky
 
 [cityofclovis.com]
 match = -65.0%%
@@ -27,9 +27,9 @@ title = App by School
 url = https://studentaid.gov/sites/default/files/fsawg/datacenter/library/2023-2024-app-data-by-school-q5.xls
 
 [www.ncbi.nlm.nih.gov]
-match = -145.0%%
-title = Secretion of immunoregulatory cytokines by mesenchymal ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4178255/
+match = -170.0%%
+title = Exposure to environmentally persistent free radicals during ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4935140/
 
 [www.energy.gov]
 match = -95.0%%
@@ -152,9 +152,9 @@ title = PowerFlex 750-Series AC Drives Reference Manual
 url = https://literature.rockwellautomation.com/idc/groups/literature/documents/rm/750-rm002_-en-p.pdf
 
 [som.cuanschutz.edu]
-match = -150.0%%
-title = D. Ross Camidge, MD, PhD - School of Medicine - CU Anschutz
-url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/18871
+match = -135.0%%
+title = Steve Abman, MD Professor, Pediatrics-Pulmonary Medicine
+url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/5902
 
 [vc2040.org]
 match = -145.0%%
@@ -187,9 +187,9 @@ title = Flight Number - Airborne Sensor Facility - NASA
 url = https://asapdata.arc.nasa.gov/sensors/fsrs/94152_fsr.pdf
 
 [profiles.ucsd.edu]
-match = -11.8%%
-title = Pieter Dorrestein
-url = https://profiles.ucsd.edu/pieter.dorrestein
+match = -41.7%%
+title = Jack Gilbert
+url = https://profiles.ucsd.edu/jack.gilbert
 
 [profiles.ucdavis.edu]
 match = 0.0%%
