CI images update

--- a/images/tham-giuong-loai-1-14/config.ini
+++ b/images/tham-giuong-loai-1-14/config.ini
@@ -142,9 +142,9 @@ title = Giường bọc nệm - LND 14 - Là Nhà
 url = https://decor.lanha.vn/san-pham/giuong-boc-nem-lnd-14/
 
 [ninhouse.vn]
-match = -76.2%%
-title = Cách tính kích thước ga giường để phù hợp với nệm
-url = https://ninhouse.vn/blogs/news/cach-tinh-kich-thuoc-ga-giuong-de-phu-hop-voi-nem
+match = -42.9%%
+title = Giá drap trải giường | Bộ chăn ga gối đệm ...
+url = https://ninhouse.vn/collections/drap
 
 [noithattamviet.net]
 match = -81.0%%
