--- a/images/chieu-lac-d2-12/config.ini
+++ b/images/chieu-lac-d2-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-12.html
 lastopen = 2024-06-21 05:09:22
 
 [search]
-lastsearch = 2024-07-31 19:33:58
+lastsearch = 2024-07-31 21:13:45
 
 [agasound.vn]
 match = 6.7%%
@@ -27,9 +27,9 @@ title = AALTO - YOUR CELEBRATING SPOT IN D2! 🎉 It's the end ...
 url = https://www.instagram.com/aalto.vn/p/CmGX0BkvJ0r/
 
 [www.facebook.com]
-match = -213.3%%
-title = Black Kingdom - D2 - CÔNG BỐ GIẢI ĐẤU OFFLINE MANG ...
-url = https://www.facebook.com/photo.php?fbid=925380399591113&id=100063574839369&set=a.647966903999132
+match = -80.0%%
+title = Rạp Chiếu Phim Cũ | Ho Chi Minh City
+url = https://www.facebook.com/phimhaygiare/
 
 [grandpark-vinhomes.com]
 match = -186.7%%
@@ -57,9 +57,9 @@ title = Điệp Xuân Chiếu lác D2 12
 url = https://www.diepxuan.com/chieu-lac-d2-12.html
 
 [shopee.vn]
-match = -186.7%%
-title = Trống cajon AB-D2 có tay chỉnh kèm bao dù chống nước
-url = https://shopee.vn/Trống-cajon-AB-D2-có-tay-chỉnh-kèm-bao-dù-chống-nước-Mặt-màu-gỗ-Bảo-hành-1-năm-i.37429989.7833832785
+match = -146.7%%
+title = bút kèn D212 bút đầu quay dễ thương viết gel
+url = https://shopee.vn/D53-bút-donut-tai-mèo-lúc-lắc-bút-dễ-thương-viết-gel-i.52220670.1799275465
 
 [mngiaquat.longbien.edu.vn]
 match = -213.3%%
