--- a/images/ga-chun-dreamland-180x200-ct/config.ini
+++ b/images/ga-chun-dreamland-180x200-ct/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/ga-chun-dreamland-180x200-ct.html
 lastopen = 2024-06-07 01:32:20
 
 [search]
-lastsearch = 2024-07-31 20:52:35
+lastsearch = 2024-07-31 21:15:51
 
 [demxanh.com]
 match = -42.9%%
 title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 01
-url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-01.html
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-01.html?srsltid=AfmBOopXrK5Y-o05SpT98qvnn59jee_u-ozLk7G2cq5E8OEE4T7e8sVS
 
 [www.diepxuan.com]
-match = 28.6%%
-title = Điệp Xuân Ga chun EPCARLESS 180x200
-url = https://www.diepxuan.com/ga-chun-epcarless-180x200.html
+match = -3.6%%
+title = Bộ chun chần WarmDream 180x200 lụa - Điệp Xuân
+url = https://www.diepxuan.com/bo-chun-chan-warmdream-180x200-lua.html?srsltid=AfmBOooCWJjw7dCG_Tgzr3zpKARlraB_jT3HA9MT5D0MMJ_HuzwMJy1N
 
 [mgaleg.maryland.gov]
 match = -75.0%%
@@ -199,7 +199,7 @@ url = http://rainocup.com/index3.php?name=https://xn--b1axgco2a.xn--p1ai/8264395
 [diepxuan.com]
 match = -21.1%%
 title = Điệp Xuân Trang Chủ
-url = https://diepxuan.com/
+url = https://diepxuan.com/?srsltid=AfmBOoopkaUzGXTPsjjzP89kMgYSjBY2Nr8NWoHShB677I5fYdm0dX_N
 
 [www.tripadvisor.com]
 match = -50.0%%
