CI images update

--- a/images/chan-4-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-4-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-09 23:17:35
 
 [search]
-lastsearch = 2024-07-31 15:50:39
+lastsearch = 2024-07-31 21:35:28
 
 [shopee.vn]
 match = 0.0%%
@@ -242,9 +242,9 @@ title = Cháy trung tâm thương mại ở Trung Quốc khiến 16 người ...
 url = https://congan.com.vn/quoc-te/thoi-su-quoc-te/chay-trung-tam-thuong-mai-o-trung-quoc-khien-16-nguoi-thiet-mang_164861.html
 
 [chiaki.vn]
-match = -25.9%%
-title = Chăn lông tuyết Dot To Dot cho bé của Hàn, Trắng trơn
-url = https://chiaki.vn/chan-long-tuyet-dot-to-dot-cho-be-cua-han
+match = 0.0%%
+title = Chăn lông tuyết kẻ tăm Muji xuất Nhật mềm mịn
+url = https://chiaki.vn/chan-tuyet-ke-tam-thu-dong-muji-mem-min-xuat-nhat
 
 [linhkienkhanhnhan.vn]
 match = 40.7%%
