--- a/images/chieu-lac-d2-10/config.ini
+++ b/images/chieu-lac-d2-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-10.html
 lastopen = 2024-06-21 02:07:26
 
 [search]
-lastsearch = 2024-07-31 17:13:38
+lastsearch = 2024-07-31 21:37:08
 
 [zhangbrickshop.com]
 match = -133.3
@@ -92,8 +92,8 @@ title = Cách giải bài tập Sai số các đại lượng vật lí trong th
 url = https://www.vietjack.com/vat-ly-lop-12/sai-so-cac-dai-luong-vat-li-trong-thi-nghiem-dao-dong-dieu-hoa.jsp
 
 [www.diepxuan.com]
-match = 20.0%%
-title = Chiếu lác D2 10 - Điệp Xuân
+match = 33.3%%
+title = Điệp Xuân Chiếu lác D2 10
 url = https://www.diepxuan.com/chieu-lac-d2-10.html
 
 [visana.vn]
@@ -182,9 +182,9 @@ title = 2'-deoxyuridine D2
 url = https://www.aptochem.com/p-101-2-deoxyuridine-d2.aspx
 
 [shopee.vn]
-match = -226.7%%
-title = Bộ đồ nam cộc tay mặc hè DSQ cotton 4 chiều thêu logo ...
-url = https://shopee.vn/Bộ-đồ-nam-cộc-tay-mặc-hè-DSQ-cotton-4-chiều-thêu-logo-ngực-phối-in-hình-lá-phong-D2-monogram-BH119P-i.29600811.24469535417
+match = -186.7%%
+title = Trống cajon AB-D2 có tay chỉnh kèm bao dù chống nước
+url = https://shopee.vn/Trống-cajon-AB-D2-có-tay-chỉnh-kèm-bao-dù-chống-nước-Mặt-màu-gỗ-Bảo-hành-1-năm-i.37429989.7833832785
 
 [uspharma.vn]
 match = -20.0%%
@@ -395,4 +395,9 @@ url = https://www.yelp.com/search?cflt=sandwiches&find_loc=CUPERTINO,+CA+95014
 match = -166.7%%
 title = Dây curoa Mitsusumi Sanlux D210-2 - Gọi 0906999843
 url = https://daycuroa.net/shop/day-curoa-mitsusumi-sanlux-d210-2/
+
+[www.pharmacity.vn]
+match = -193.3%%
+title = Lineabon K2+D3: Bé Ngủ Ngon, Tăng Chiều Cao (Chai ...
+url = https://www.pharmacity.vn/lineabon-k2d3-giup-tre-tang-chieu-cao-10ml.html
 
