--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-07-31 20:35:17
+lastsearch = 2024-07-31 21:42:20
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,9 +12,9 @@ title = Chiếu trúc thai đen14
 url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 
 [demxanh.com]
-match = -76.2%%
-title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html
+match = 14.3%%
+title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
+url = https://demxanh.com/chieu-truc-den.html
 
 [www.lazada.vn]
 match = -81.0%%
@@ -49,7 +49,7 @@ url = https://nhandan.vn/nguoi-dan-phan-khoi-vui-mung-khi-nhan-luong-huu-tro-cap
 [pctravinh.evnspc.vn]
 match = -90.5%%
 title = Trang thông tin điện tử - Công Ty Điện Lực Trà Vinh
-url = https://pctravinh.evnspc.vn/CMS_Article?AID=ARTICLE14030719&MID=F02-MNU202105-00000007
+url = https://pctravinh.evnspc.vn/CMS_Article?AID=ARTICLE14030719&MID=F02-MNU202105-00000041
 
 [baoapbac.vn]
 match = -47.6%%
@@ -267,9 +267,9 @@ title = Bệnh đau mắt đỏ: Dấu hiệu, nguyên nhân và lưu ý cần b
 url = https://tamanhhospital.vn/benh-dau-mat-do/
 
 [suckhoedoisong.vn]
-match = -128.6%%
-title = Đi lạc từ Quảng Ngãi ra Quảng Ninh, cụ bà được công an ...
-url = https://suckhoedoisong.vn/di-lac-tu-quang-ngai-ra-quang-ninh-cu-ba-duoc-cong-an-giup-tim-nguoi-than-169240726211538785.htm
+match = -81.0%%
+title = Độ tuổi nào kích thước cậu nhỏ ngừng phát triển?
+url = https://suckhoedoisong.vn/do-tuoi-nao-kich-thuoc-cau-nho-ngung-phat-trien-169240731002723305.htm
 
 [bptv.vn]
 match = -104.8%%
@@ -357,9 +357,9 @@ title = Từng bước hình thành văn hóa giao thông
 url = https://baobacninh.vn/tung-buoc-hinh-thanh-van-hoa-giao-thong-89980.html
 
 [www.vietnamplus.vn]
-match = -138.1%%
-title = Thái Bình: Cháy xưởng sản xuất bật lửa gas, 12 công nhân ...
-url = https://www.vietnamplus.vn/thai-binh-chay-xuong-san-xuat-bat-lua-gas-12-cong-nhan-nhap-vien-cap-cuu-post966772.vnp
+match = -128.6%%
+title = Tuyên Quang, Bắc Kạn chủ động ứng phó với lũ quét, sạt lở
+url = https://www.vietnamplus.vn/tuyen-quang-bac-kan-chu-dong-ung-pho-voi-lu-quet-sat-lo-post967917.vnp
 
 [cadn.com.vn]
 match = -114.3%%
@@ -517,9 +517,9 @@ title = Ghi nhận 126 trận động đất có độ lớn từ 2,5 đến 4,1
 url = http://caobangtv.vn/tin-tuc-n74895/ghi-nhan-126-tran-dong-dat-co-do-lon-tu-25-den-41-do.html
 
 [www.binhduong.gov.vn]
-match = -128.6%%
-title = Công bố chất lượng Hệ thống thông tin giải quyết thủ tục ...
-url = https://www.binhduong.gov.vn/thong-tin-tuyen-truyen/2024/07/981-cong-bo-chat-luong-he-thong-thong-tin-giai-quyet-thu-tuc-hanh-chinh-cap-bo-cap-tin
+match = -133.3%%
+title = Thông tin tuyên truyền - Thiết lập trật tự, kỷ cương trong ...
+url = https://www.binhduong.gov.vn/thong-tin-tuyen-truyen/2024/07/137-thiet-lap-trat-tu-ky-cuong-trong-chap-hanh-phap-luat-ve-giao-thon
 
 [binhphuoc.gov.vn]
 match = -90.5%%
