--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-07-31 18:50:27
+lastsearch = 2024-07-31 21:33:45
 
 [www.instagram.com]
 match = -161.5%%
@@ -302,8 +302,8 @@ title = Hoi Yi Chan's Reviews on Carousell Hong Kong
 url = https://www.carousell.sg/u/justforu.shop/reviews/
 
 [www.bbc.com]
-match = -261.5%%
-title = South Korea: First lady's Dior bag shakes country's ...
+match = -230.8%%
+title = South Korea: First lady's Dior bag shakes ... - BBC
 url = https://www.bbc.com/news/world-asia-68090638
 
 [www.straitstimes.com]
@@ -335,4 +335,9 @@ url = https://fortune.com/europe/2024/06/11/lvmh-italian-dior-maker-investigatio
 match = 23.1%%
 title = Hoi, Chun Kit
 url = https://www.jobeasy.com/buyoyo/eng/SearchByArtist.do?arrfnbr=360230
+
+[www.imdb.com]
+match = -138.5%%
+title = Gregor's Top 30 Actors from China/HK
+url = https://www.imdb.com/list/ls066069202/
 
