--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-07-31 19:28:05
+lastsearch = 2024-07-31 21:43:23
 
 [hoa18.com]
 match = -84.2%%
@@ -12,9 +12,9 @@ title = Giỏ hoa tươi Mộc Mạc - Giá tốt nhất - Shop Hoa18
 url = https://hoa18.com/san-pham/gio-hoa-tuoi-moc-mac
 
 [www.youtube.com]
-match = -147.4%%
-title = Cây Mộc Hương Ta Và 8 Loài Hoa Đẹp Chơi Tết 2023 | Đt ...
-url = https://www.youtube.com/watch?v=NPdIFgtFTso
+match = -89.5%%
+title = Hoa Mộc Hương ta có cần cắt tỉa tạo tán không?
+url = https://www.youtube.com/watch?v=rDqH9asT7yA
 
 [kallos.co]
 match = -105.3%%
@@ -27,9 +27,9 @@ title = Hồi Sinh Ngọc Rồng
 url = https://www.facebook.com/hoisinhngocrong/
 
 [vietnambiz.vn]
-match = -89.5%%
-title = Câu chuyện về hành trình 20 năm của laptop MSI
-url = https://vietnambiz.vn/cau-chuyen-ve-hanh-trinh-20-nam-cua-laptop-msi-2024729174540237.htm
+match = -157.9%%
+title = Đầu phiên ngày 1/8, dự báo giá heo hơi đảo chiều tăng tại ...
+url = https://vietnambiz.vn/dau-phien-ngay-18-du-bao-gia-heo-hoi-dao-chieu-tang-tai-mot-vai-dia-phuong-2024731104550950.htm
 
 [thoibaotaichinhvietnam.vn]
 match = -147.4%%
