--- a/images/chieu-truc-thai-den-160x200/config.ini
+++ b/images/chieu-truc-thai-den-160x200/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-truc-thai-den-160x200.html
 lastopen = 2024-06-30 02:08:23
 
 [search]
-lastsearch = 2024-07-31 20:27:21
+lastsearch = 2024-07-31 21:34:27
 
 [demxanh.com]
-match = 0.0%%
-title = Chiếu Trúc Thanh Hương Trúc Trúc đá viền lụa
-url = https://demxanh.com/chieu-truc-thanh-huong-truc-truc-da-vien-lua-new.html
+match = 37.0%%
+title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
+url = https://demxanh.com/chieu-truc-den.html
 
 [demre.com.vn]
 match = 66.7%%
 title = chiếu trúc hạt đen- trắng 160x200
-url = https://demre.com.vn/chieu-truc-hat-den-trang-160x200-2
+url = https://demre.com.vn/chieu-truc-hat-den-trang-160x200-1
 
 [sieuthitretho.vn]
 match = 3.7%%
@@ -22,9 +22,9 @@ title = Chiếu trúc hạt Thái Bình cao cấp 160x200 tại Hà Nội
 url = https://sieuthitretho.vn/chieu-truc-hat-thai-binh-cao-cap-160x200-p498.html
 
 [dem24h.vn]
-match = 51.9%%
-title = Chiếu trúc gập vân gỗ 2 mặt
-url = https://dem24h.vn/chieu-truc-gap-van-go
+match = 29.6%%
+title = Chiếu Trúc Cao Cấp Hạt Đen Không Viền
+url = https://dem24h.vn/chieu-truc-hat-den-khong-vien
 
 [thegioidemonline.com]
 match = 65.4%%
