--- a/images/ga-chong-tham-dreamland-200x220/config.ini
+++ b/images/ga-chong-tham-dreamland-200x220/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chong-tham-dreamland-200x220.html
 lastopen = 2024-06-07 00:24:06
 
 [search]
-lastsearch = 2024-07-31 18:17:10
+lastsearch = 2024-07-31 21:30:39
 
 [www.dreamland.vn]
 match = -14.3%%
@@ -17,9 +17,9 @@ title = Lưu trữ 200×220 - Trang 14 trên 21 ... - Đệm Dreamland
 url = https://demdreamland.vn/kich-thuoc/200x220/page/14/
 
 [demxanh.com]
-match = -22.6%%
-title = Ga chống thấm Hilton Cotton cao cấp CTHT01 | Khuyến mãi
-url = https://demxanh.com/ga-chong-tham-hilton-cotton-cao-cap-ctht01.html
+match = -6.5%%
+title = Đệm bông ép Dreamland chống thoái hóa cột sống
+url = https://demxanh.com/dem-bong-ep-dreamland-chong-thoai-hoa-cot-song.html?srsltid=AfmBOoqK0xbMYNP7ggLMEiNVzIK3Xn9oeaCTvuo2TYm7Hy__JGmuA_Cz
 
 [dreamland.vn]
 match = -21.1%%
@@ -27,9 +27,9 @@ title = Chăn Tuyết Điều Hòa
 url = http://dreamland.vn/Chan-Tuyet-Dieu-Hoa-i4421.html
 
 [demxinh.vn]
-match = 9.7%%
-title = Chăn Ga Gối Dreamland Chính Hãng Giá Tốt
-url = https://demxinh.vn/chan-ga-goi-dreamland/
+match = 15.4%%
+title = Bộ Ga Phủ D'lavish LUX2305
+url = https://demxinh.vn/bo-ga-phu-lux2305.html
 
 [dongahome.vn]
 match = 3.2%%
@@ -39,7 +39,7 @@ url = https://dongahome.vn/dem-lo-xo-cao-cap-hanvico-hera
 [vuanem.com]
 match = -35.5%%
 title = Để chuyện phòng the lên đỉnh, bạn nên chọn loại nệm nào?
-url = https://vuanem.com/blog/de-chuyen-phong-the-len-dinh-chon-nem-nao.html
+url = https://vuanem.com/blog/de-chuyen-phong-the-len-dinh-chon-nem-nao.html?srsltid=AfmBOor1P21jcTCqcCn-5-L9ugqGqUfLf_gZgOxiEW7xuoqk_mOkzTyV
 
 [uannga.vn]
 match = 6.5%%
