--- a/images/vo-chan-ks-uc-23-260/config.ini
+++ b/images/vo-chan-ks-uc-23-260/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-23-260.html
 lastopen = 2024-06-10 00:51:21
 
 [search]
-lastsearch = 2024-07-31 16:19:51
+lastsearch = 2024-07-31 21:44:05
 
 [fsapartners.ed.gov]
 match = -45.0%%
@@ -37,9 +37,9 @@ title = Faculty and Staff | Department of Kinesiology
 url = https://www.sjsu.edu/kinesiology/about-us/faculty-and-staff.php
 
 [profiles.ucsd.edu]
-match = -10.0%%
-title = Anders Dale - UCSD Profiles
-url = https://profiles.ucsd.edu/anders.dale
+match = -15.0%%
+title = Robert Weinreb - UCSD Profiles
+url = https://profiles.ucsd.edu/robert.weinreb
 
 [quicksearch.dla.mil]
 match = -185.7%%
@@ -52,9 +52,9 @@ title = Name: Paul David Adams Address
 url = https://cci.lbl.gov/~paul/Adams-CV-12-2023.pdf
 
 [profiles.ucsf.edu]
-match = 11.1%%
-title = Marina Sirota, PhD
-url = https://profiles.ucsf.edu/marina.sirota
+match = 0.0%%
+title = Youngho Seo, PhD
+url = https://profiles.ucsf.edu/youngho.seo
 
 [www.ncbi.nlm.nih.gov]
 match = -130.0%%
