--- a/images/bo-bon-mua-chun-chan-182m/config.ini
+++ b/images/bo-bon-mua-chun-chan-182m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-182m.html
 lastopen = 2024-06-07 00:25:46
 
 [search]
-lastsearch = 2024-07-31 18:34:50
+lastsearch = 2024-07-31 21:45:58
 
 [everon.online]
 match = 12.0%%
@@ -12,9 +12,9 @@ title = Bộ Ga Chun Chần Everon Bốn Mùa ...
 url = https://everon.online/collections/bo-ga-chun-chan-bon-mua-everon
 
 [everonchinhhang.vn]
-match = -32.0%%
-title = Bộ chăn bốn mùa Dòng Thời Gian - EPT24081 - Everon
-url = https://everonchinhhang.vn/products/bo-chan-bon-mua-dong-thoi-gian-ept24081
+match = -12.0%%
+title = Bộ ga chun chần Freesia bốn mùa - Everon
+url = https://everonchinhhang.vn/products/bo-ga-chun-chan-freesia-bon-mua
 
 [everonvn.com.vn]
 match = 28.0%%
@@ -152,9 +152,9 @@ title = Mẹ già U70 cõng con trai cao 1,82m suốt 5 năm, cố tập cho ...
 url = https://vietbao.vn/me-gia-u70-cong-con-trai-cao-1-82m-suot-5-nam-co-tap-cho-con-di-bo-491194.html
 
 [m.facebook.com]
-match = 20.0%%
-title = Hội Mua Bán Chung Cư Hà Nội Giá Rẻ
-url = https://m.facebook.com/groups/386614282654291/posts/1025219878793725/
+match = -56.0%%
+title = HÀ NỘI | Bán nhà Thanh Xuân, nhà đẹp, ở ngay, 52m, 8 tỷ
+url = https://m.facebook.com/groups/muabannhadathanoi247/posts/7982408988520156/
 
 [dantri.com.vn]
 match = -60.0%%
