--- a/images/chieu-dieu-hoa-khong-goi-15/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-15.html
 lastopen = 2024-06-09 23:41:33
 
 [search]
-lastsearch = 2024-07-31 20:22:27
+lastsearch = 2024-07-31 21:45:16
 
 [demxanh.com]
 match = 14.8%%
 title = Sử dụng chiếu điều hòa có tốt hay không?
-url = https://demxanh.com/su-dung-chieu-dieu-hoa-co-tot-hay-khong.html?srsltid=AfmBOorFMl0Rr5h6oFn4zVKIx0N1MAJR6sR-oUCZ5i00Fh0-BW0Eb-tQ
+url = https://demxanh.com/su-dung-chieu-dieu-hoa-co-tot-hay-khong.html
 
 [goni.vn]
 match = 14.8%%
@@ -22,9 +22,9 @@ title = Chiếu Điều Hoà Sợi Mây Tơ Tằm Mát Lạnh Không Gối ...
 url = https://shopee.vn/Chiếu-Điều-Hoà-Sợi-Mây-Tơ-Tằm-Mát-Lạnh-Không-Gối-Cao-Cấp-Chiếu-Có-Chun-Cài-Góc-Hàng-Loại-1-i.529742790.25073007553
 
 [foreverbedding.net]
-match = -59.3%%
-title = Những Thông Tin Cần Biết Khi Mua Chiếu Điều Hoà Cao Su ...
-url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-la-gi?srsltid=AfmBOopP0c3qIsEP_Om2QGBM_S-YoY4b5C2Fry05oR4dmv4VVr0OSgqO
+match = 0.0%%
+title = Nằm Chiếu Điều Hòa Có Mát Không? - Forever Bedding
+url = https://foreverbedding.net/nam-chieu-dieu-hoa-co-mat-khong
 
 [congtynemthangloi.com]
 match = -29.6%%
@@ -84,7 +84,7 @@ url = https://www.congnghieptieudung.vn/su-that-ve-cong-dung-cua-chieu-dieu-hoa-
 [spacet.vn]
 match = -40.7%%
 title = Hướng dẫn giặt chiếu điều hòa đúng cách, đơn giản, hiệu ...
-url = https://spacet.vn/blog/nguon-cam-hung/huong-dan-giat-chieu-dieu-hoa-dung-cach-don-gian-hieu-qua?srsltid=AfmBOop6QlFbfKlPePQw2PT2XPnP5KgoFTNurGmolSm45SGnWIfgQb9V
+url = https://spacet.vn/blog/nguon-cam-hung/huong-dan-giat-chieu-dieu-hoa-dung-cach-don-gian-hieu-qua
 
 [chieutrelinhchi.com]
 match = 0.0%%
