--- a/images/chieu-lac-soc-14/config.ini
+++ b/images/chieu-lac-soc-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-14.html
 lastopen = 2024-06-09 23:48:09
 
 [search]
-lastsearch = 2024-07-31 19:38:02
+lastsearch = 2024-07-31 21:47:24
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -209,7 +209,7 @@ url = https://vaas.vn/vi/giong/giong-lac-l14
 [www.vinaseed.com.vn]
 match = -56.2%%
 title = Hướng dẫn gieo trồng giống lạc L14
-url = https://www.vinaseed.com.vn/vi/news/m25/huong-dan-gieo-trong-giong-lac-l14-150.htm
+url = https://www.vinaseed.com.vn/vi/news/m35/huong-dan-gieo-trong-giong-lac-l14-150.htm
 
 [www.chieuduong.vn]
 match = -87.5%%
@@ -302,9 +302,9 @@ title = Bị Nghiêp đòng Dâm Hiếp - Chồng bất lực nhìn vợ bị
 url = https://jebbia.it/1309260-bị-hiếp-nghiêp-đòng-dâm.html
 
 [www.momo.vn]
-match = -68.8%%
-title = Lịch chiếu phim CGV Bình Dương Square
-url = https://www.momo.vn/cinema/rap/cgv/cgv-binh-duong-square-15
+match = -75.0%%
+title = Lịch chiếu phim CGV Hà Nội Centerpoint
+url = https://www.momo.vn/cinema/rap/cgv/cgv-ha-noi-centerpoint-1
 
 [hico.vn]
 match = -168.8%%
