--- a/images/ga-ni-long-18/config.ini
+++ b/images/ga-ni-long-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-18.html
 lastopen = 2024-06-09 23:39:01
 
 [search]
-lastsearch = 2024-07-31 20:41:12
+lastsearch = 2024-07-31 21:47:02
 
 [www.zillow.com]
 match = -69.2%%
@@ -147,9 +147,9 @@ title =
 url = https://georgia.gov/request-immunization-records
 
 [www.instagram.com]
-match = -61.5%%
-title = NEETI MOHAN (@neetimohan18)
-url = https://www.instagram.com/neetimohan18/?hl=en
+match = -10.0%%
+title = sylviagani
+url = https://www.instagram.com/sylviagani/?hl=en
 
 [www.mariettaga.gov]
 match = -84.6%%
@@ -609,7 +609,7 @@ url = https://apnews.com/article/willis-wade-relationship-allegations-trump-elec
 [www.lazada.vn]
 match = -176.9%%
 title = Ga Ni Long Giá Tốt T07/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/ga-ni-long/
+url = https://www.lazada.vn/tag/ga-ni-long/?srsltid=AfmBOopNQpZwnsRL--lo2YUUqPU_EmAhmZcy5DUEnqJLVOYq6BARwDkE
 
 [www.njcaa.org]
 match = -140.0%%
