--- a/images/tui-singapore-150x190x09/config.ini
+++ b/images/tui-singapore-150x190x09/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tui-singapore-150x190x09.html
 lastopen = 2024-06-17 10:41:24
 
 [search]
-lastsearch = 2024-07-31 17:26:58
+lastsearch = 2024-07-31 21:49:54
 
 [www.diepxuan.com]
 match = 5.3%%
 title = Túi nệm - Điệp Xuân
-url = https://www.diepxuan.com/nem-bong/tui-nem.html
+url = https://www.diepxuan.com/nem-bong/tui-nem.html?srsltid=AfmBOooGZHhzJD20p20PlFhBQXzHyRFztJ31gE1aiOskukCBZw6C7zKA
 
 [www.tui.co.uk]
-match = -58.3%%
-title = Where We Fly | Flights with TUI 2024 / 2025
-url = https://www.tui.co.uk/flight/where-we-fly
+match = 0.0%%
+title = 
+url = https://www.tui.co.uk/cruise/ships
 
 [www.seatrade-cruise.com]
 match = -100.0%%
