--- a/images/nem-sieu-nhe-9f-12/config.ini
+++ b/images/nem-sieu-nhe-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-12.html
 lastopen = 2024-06-10 01:22:00
 
 [search]
-lastsearch = 2024-07-31 18:30:19
+lastsearch = 2024-07-31 22:15:40
 
 [www.lazada.vn]
 match = -111.1%%
@@ -117,9 +117,9 @@ title = Emart Shopping
 url = https://emartmall.com.vn/
 
 [shopee.vn]
-match = -166.7%%
-title = Nem nướng phên bà tuyết - Giá Tốt, Miễn Phí Vận Chuyển, ...
-url = https://shopee.vn/list/nem nướng phên
+match = -127.8%%
+title = Nệm cao su non hút hơi SIÊU ÊM- SIÊU MÁT dày 12p(cm ...
+url = https://shopee.vn/Nệm-cao-su-non-hút-hơi-SIÊU-ÊM-SIÊU-MÁT-dày-12p(cm)-1m6x2-bảo-hành-15-năm-Chuyên-sỉ-i.126046243.1947396735
 
 [zaracos.vn]
 match = -144.4%%
@@ -175,4 +175,39 @@ url = https://www.pge.com/en/account/billing-and-assistance/understand-your-bill
 match = -61.1%%
 title = NEM-12 - Pneumatic cylinders (Fabco-Air)
 url = https://shop.hartfiel.com/products/NEM-12
+
+[lombom.com]
+match = -122.2%%
+title = Đệm Sinh Viên nệm xốp ép siêu nhẹ giá rẻ - Lombomshop!
+url = https://lombom.com/dem-sinh-vien/
+
+[nemhana.com]
+match = -94.4%%
+title = Nệm cao su thiên nhiên Thắng Lợi Super Win gấp 3
+url = https://nemhana.com/nem-cao-su-thien-nhien-thang-loi-super-win-gap-3/
+
+[nemthangloi.net]
+match = 11.1%%
+title = Nệm Super Win Foam cao cấp
+url = https://nemthangloi.net/san-pham/nem-super-win-foam/
+
+[ru9.vn]
+match = -111.1%%
+title = Top 10 nệm nào nằm mát nhất, không sợ đau lưng?
+url = https://ru9.vn/blogs/magazine/nem-nao-nam-mat
+
+[nemgiakho.com]
+match = -172.2%%
+title = Giới thiệu một số dòng nệm dày 12 cm giá rẻ tốt nhất tại ...
+url = https://nemgiakho.com/gioi-thieu-mot-so-dong-nem-day-12-cm-gia-re-tot-nhat-tai-nem-gia-kho.html
+
+[demxanh.com]
+match = -133.3%%
+title = Top 10 loại nệm dành cho người đau lưng tốt nhất 2024
+url = https://demxanh.com/nem-cho-nguoi-dau-lung.html
+
+[www.everonvn.vn]
+match = -38.9%%
+title = Ruột chăn Everon Micro siêu nhẹ
+url = https://www.everonvn.vn/chi-tiet/ruot-chan-everon-micro.html
 
