--- a/images/tui-warmdream-14/config.ini
+++ b/images/tui-warmdream-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-14.html
 lastopen = 2024-06-10 00:24:23
 
 [search]
-lastsearch = 2024-07-31 14:55:57
+lastsearch = 2024-07-31 22:17:04
 
 [www.diepxuan.com]
-match = -125.0%%
-title = Túi Warmdream 140x190x09 - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/tui-warmdream-140x190x09.html
+match = 18.8%%
+title = Túi nệm - Điệp Xuân
+url = https://www.diepxuan.com/nem-bong/tui-nem.html
 
 [demxanh.com]
 match = -181.2%%
@@ -200,4 +200,9 @@ url = https://ayd643.com/product/fyaptzxg-246/
 match = -143.8%%
 title = gucci premiere perfume notes - More - iea504.com
 url = https://iea504.com/blog/swrrgrue-205/
+
+[kuw725.com]
+match = -175.0%%
+title = malta in april - malta april temperature - kuw725.com
+url = https://kuw725.com/product/mtphzmne-234//
 
