--- a/images/chieu-cay-ht-tre-em/config.ini
+++ b/images/chieu-cay-ht-tre-em/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-tre-em.html
 lastopen = 2024-06-06 16:42:52
 
 [search]
-lastsearch = 2024-07-31 21:48:28
+lastsearch = 2024-07-31 22:29:23
 
 [shopee.vn]
 match = -36.8%%
@@ -27,9 +27,9 @@ title = Chiếu trúc hạt nhỏ có viền màu nâu đen Size: 1m6x1m9
 url = https://chieutrelinhchi.com/chieu-truc-1m6/chieu-truc-hat-nho-co-vien-mau-nau-1m6-88.html
 
 [www.youtube.com]
-match = -157.9%%
-title = ALIBABA - Bé Tú Anh | Nhạc Thiếu Nhi | Lời Việt: Lê Quốc ...
-url = https://www.youtube.com/watch?v=x-ljTpcenNg
+match = -131.6%%
+title = MƯA HÈ ♫ Tú Anh - Nhạc Thiếu Nhi Mùa Hè Vui Nhộn Cho ...
+url = https://www.youtube.com/watch?v=ZbNN7ZZ1YOk
 
 [dochoihoangthu.com]
 match = -121.1%%
@@ -62,9 +62,9 @@ title = CHIẾU TRE , CHIẾU TRÚC MẮT NHỎ HẠT VÀNG DÒNG ...
 url = https://www.lazada.vn/products/chieu-tre-chieu-truc-mat-nho-hat-vang-dong-cao-cap-du-kich-thuoc-i251143269.html
 
 [tiki.vn]
-match = -136.8%%
-title = Cây Xương Rồng Nhảy Múa, Loại 120 Bài Hát Vui Nhộn, ...
-url = https://tiki.vn/cay-xuong-rong-nhay-mua-loai-120-bai-hat-vui-nhon-do-choi-tre-em-ht-sys-p275290022.html?spid=275290022
+match = -126.3%%
+title = Mua Đồ Chơi Trẻ Em HT SYS - Bộ Đồ Chơi Lắp Ghép Kỹ ...
+url = https://tiki.vn/do-choi-tre-em-ht-sys-bo-do-choi-lap-ghep-ky-su-bang-oc-nhua-tang-kem-khoan-do-choi-tre-em-thong-minh-ht-sys-giup-tu-duy-sang-tao-giao-duc-cho-be-hang-chinh-hang-p275587203.html
 
 [khodem.vn]
 match = 31.6%%
