--- a/images/chieu-lac-d2-16/config.ini
+++ b/images/chieu-lac-d2-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-16.html
 lastopen = 2024-06-06 16:54:08
 
 [search]
-lastsearch = 2024-07-31 17:50:46
+lastsearch = 2024-07-31 22:13:34
 
 [vinatools.com]
 match = -140.0%%
@@ -47,9 +47,9 @@ title = Cowon D2 gia nhập 'câu lạc bộ 16 GB'
 url = https://vnexpress.net/cowon-d2-gia-nhap-cau-lac-bo-16-gb-1500501.html
 
 [www.facebook.com]
-match = -233.3%%
-title = Ngày mai 7/3 chi nhánh 16 (73 Nguyễn... - Ways Station ...
-url = https://www.facebook.com/waysstation/posts/ngày-mai-73-chi-nhánh-16-73-nguyễn-văn-lạc-bình-thạnh-chính-thức-hoạt-động-lại-n/1220849978345623/
+match = -53.3%%
+title = Black Kingdom - D2 - Facebook
+url = https://www.facebook.com/photo.php?fbid=925380399591113&id=100063574839369&set=a.647966903999132&locale=vi_VN
 
 [banhang.shopee.vn]
 match = -66.7%%
@@ -172,9 +172,9 @@ title = D2 Club (Ma Cao, Trung Quốc) - Đánh giá - Tripadvisor
 url = https://www.tripadvisor.com.vn/Attraction_Review-g664891-d4925838-Reviews-D2_Club-Macau.html
 
 [www.tiktok.com]
-match = -153.3%%
-title = Seventeen Caratland 2024 Cheers to Youth Full
-url = https://www.tiktok.com/discover/seventeen-caratland-2024-cheers-to-youth-full
+match = -246.7%%
+title = Trend về D2 Bình Thạnh rồi nè Tui đi ăn lạp xưởng xúc xích ...
+url = https://www.tiktok.com/@hi.vidayyy/video/7322653266637032706
 
 [www.lazada.vn]
 match = -146.7%%
