--- a/images/man-re-trang-16/config.ini
+++ b/images/man-re-trang-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-16.html
 lastopen = 2024-06-09 23:51:34
 
 [search]
-lastsearch = 2024-07-31 17:51:07
+lastsearch = 2024-07-31 22:22:53
 
 [www.gov.uk]
 match = -200.0%%
@@ -417,9 +417,9 @@ title = The PACT Act And Your VA Benefits | Veterans Affairs
 url = https://www.va.gov/resources/the-pact-act-and-your-va-benefits/
 
 [www.nasa.gov]
-match = -225.0%%
-title = NASA
-url = https://www.nasa.gov/
+match = -10.0%%
+title = Astronauts
+url = https://www.nasa.gov/humans-in-space/astronauts/
 
 [cuyahogacounty.gov]
 match = -80.0%%
@@ -807,8 +807,8 @@ title = 16Personalities: Free personality test, type descriptions ...
 url = https://www.16personalities.com/
 
 [humane.com]
-match = -33.3%%
-title = Humane: Ai Pin - Wearable Ai
+match = -60.0%%
+title = Ai Pin - Wearable Ai | Humane
 url = https://humane.com/
 
 [www.wrdw.com]
@@ -1115,4 +1115,9 @@ url = https://www.kktv.com/
 match = -120.0%%
 title = Third Bank Records Memorandum_Redacted.pdf
 url = https://oversight.house.gov/wp-content/uploads/2023/08/Third-Bank-Records-Memorandum_Redacted.pdf
+
+[uk.usembassy.gov]
+match = 0.0%%
+title = 
+url = https://uk.usembassy.gov/visas/family-immigration/sondaughter-over-21-brother-or-sister-of-a-u-s-citizen/
 
