--- a/images/nem-caosu-thang-loi-160x200x10/config.ini
+++ b/images/nem-caosu-thang-loi-160x200x10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-caosu-thang-loi-160x200x10.html
 lastopen = 2024-06-07 01:42:38
 
 [search]
-lastsearch = 2024-07-31 19:01:39
+lastsearch = 2024-07-31 22:12:53
 
 [congtynemthangloi.com]
 match = -46.7%%
@@ -17,9 +17,9 @@ title = NỆM CAO SU GOLDLATEX THẮNG LỢI
 url = https://khonemgiatot.vn/nem-cao-su-goldlatex-thang-loi
 
 [nemcaosuthangloi.vn]
-match = 22.7%%
-title = Nệm cao su thiên nhiên
-url = https://nemcaosuthangloi.vn/nem-cao-su-nem-cao-su-thien-nhien.html
+match = 33.3%%
+title = NỆM CAO SU NON THẮNG LỢI
+url = https://nemcaosuthangloi.vn/nem-cao-su-non-thang-loi.html
 
 [noithatdaithanh.vn]
 match = 36.7%%
@@ -110,4 +110,14 @@ url = https://nemthangloi.co/san-pham/nem-cao-su-non-thang-loi
 match = 40.0%%
 title = Nệm cao su Thắng Lợi
 url = https://nemgiakho.com/nem-cao-su-thang-loi
+
+[demxanh.com]
+match = -20.0%%
+title = [Hot] Bảng giá nệm cao su Đồng Phú khuyến mãi 2024
+url = https://demxanh.com/bang-gia-nem-cao-su-dong-phu-2018.html
+
+[shopee.vn]
+match = 10.0%%
+title = Nệm cao su non gấp 3 Thắng Lợi nhiều kích thước
+url = https://shopee.vn/Nệm-cao-su-non-gấp-3-Thắng-Lợi-nhiều-kích-thước-Nội-Thất-Phan-Gia-i.1118973577.18895840648
 
