--- a/images/nem-sieu-nhe-9f-15/config.ini
+++ b/images/nem-sieu-nhe-9f-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-15.html
 lastopen = 2024-06-10 00:49:22
 
 [search]
-lastsearch = 2024-07-31 19:30:09
+lastsearch = 2024-07-31 22:26:17
 
 [www.lazada.vn]
 match = -94.4%%
@@ -22,9 +22,9 @@ title = NEM Furniture JSC (@nemfurniturejsc)
 url = https://www.instagram.com/nemfurniturejsc/?hl=en
 
 [thegioinem.com]
-match = -116.7%%
-title = Top 5 nệm mỏng gấp gọn bán chạy nhất Thế Giới Nệm
-url = https://thegioinem.com/top-5-nem-mong-gap-gon-ban-chay-nhat-the-gioi-nem.html
+match = -111.1%%
+title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
+url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
 
 [cotienfoods.vn]
 match = -72.2%%
@@ -190,4 +190,9 @@ url = https://anta.com.vn/
 match = -161.1%%
 title = Hướng dẫn cách làm bánh đa nem thơm ngon, giòn rụm, ...
 url = https://fptshop.com.vn/tin-tuc/dien-may/cach-lam-banh-da-nem-175898
+
+[www.gso.gov.vn]
+match = -138.9%%
+title = Niên giám thống kê Việt Nam năm 2018 = Statistical ...
+url = https://www.gso.gov.vn/wp-content/uploads/2019/10/Nien-giam-2018-1.pdf
 
