CI images update

--- a/images/chieu-cay-moc-hoa14/config.ini
+++ b/images/chieu-cay-moc-hoa14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa14.html
 lastopen = 2024-06-09 23:35:14
 
 [search]
-lastsearch = 2024-07-31 16:27:50
+lastsearch = 2024-07-31 22:31:45
 
 [www.youtube.com]
 match = -147.4%%
@@ -53,8 +53,8 @@ url = https://baothanhhoa.vn/bao-tu-manh-nhat-trong-hai-thap-ky-gay-anh-huong-to
 
 [shophoavungtau.com]
 match = -89.5%%
-title = Đi viếng đám tang vái lạy mấy lần cho đúng cách
-url = https://shophoavungtau.com/vai-lay-dam-tang-may-lan
+title = Cách trồng hoa cẩm tú cầu với các bước đơn giản
+url = https://shophoavungtau.com/cach-trong-hoa-cam-tu-cau
 
 [tiin.vn]
 match = -147.4%%
@@ -92,9 +92,9 @@ title = Hội những người yêu cây hoa mộc hương
 url = https://www.facebook.com/groups/767523203695729/?locale=vi_VN
 
 [nongnghiep.vn]
-match = -152.6%%
-title = Bưu điện Việt Nam ra mắt bộ tem Bảo vật quốc gia về đồ ...
-url = https://nongnghiep.vn/buu-dien-viet-nam-ra-mat-bo-tem-bao-vat-quoc-gia-ve-do-gom-d394415.html
+match = -121.1%%
+title = Trùng tu Chùa Cầu và chiều sâu văn hóa của người Hội An
+url = https://nongnghiep.vn/trung-tu-chua-cau-va-chieu-sau-van-hoa-cua-nguoi-hoi-an-d394764.html
 
 [baophuyen.vn]
 match = -36.8%%
