--- a/images/nem-di-a-mon-9f-16-re/config.ini
+++ b/images/nem-di-a-mon-9f-16-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-16-re.html
 lastopen = 2024-06-10 00:47:22
 
 [search]
-lastsearch = 2024-07-31 17:40:05
+lastsearch = 2024-07-31 22:35:20
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -22,14 +22,14 @@ title = Ethnologue | Languages of the world
 url = https://www.ethnologue.com/
 
 [m.facebook.com]
-match = -133.3%%
-title = Learning Hungarian on Duolingo | I was looking for a list ...
-url = https://m.facebook.com/groups/943246729103874/posts/7428405300587952/
+match = -66.7%%
+title = Garland Food Trucks | 🔥🔥🔥 𝐌𝐚̆́𝐦 𝐧𝐞̂𝐦 𝐃𝐢̀ 𝐂𝐚̂̉𝐧 Đ𝐚̀ ...
+url = https://m.facebook.com/groups/1015572375241131/posts/3337954653002880/
 
 [www.instagram.com]
-match = -100.0%%
-title = Adam Mosseri (@mosseri) • Instagram photos and videos
-url = https://www.instagram.com/mosseri/?hl=en
+match = -95.2%%
+title = Đi Ăn Đi (@diandi.nyc) • Instagram photos and videos
+url = https://www.instagram.com/diandi.nyc/?hl=en
 
 [www.imdb.com]
 match = -23.8%%
@@ -54,7 +54,7 @@ url = https://wattclarity.com.au/articles/2020/05/nem20-balancingsupplydemand-ra
 [books.google.com]
 match = -142.9%%
 title = The queen's printers' aids to the student of the holy Bible. ...
-url = https://books.google.com/books?id=dVBbAAAAQAAJ&pg=RA2-PA2&lpg=RA2-PA2&dq=nem+di+a+mon+9f+16+re&source=bl&ots=NeDD2xjssB&sig=ACfU3U3Wiz-kCe_RCsrlYADNXhoKl9p_KQ&hl=en&sa=X&ved=2ahUKEwjn2JC9i9GHAxUPENAFHX-4A8cQ6AF6BAgcEAM
+url = https://books.google.com/books?id=dVBbAAAAQAAJ&pg=RA2-PA2&lpg=RA2-PA2&dq=nem+di+a+mon+9f+16+re&source=bl&ots=NeDD2zhpux&sig=ACfU3U0YH_w4NsU7B7BDxtt2WhbztVXxWw&hl=en&sa=X&ved=2ahUKEwjDl7y8zdGHAxVSEDQIHUNOMTMQ6AF6BAgrEAM
 
 [www.diepxuan.com]
 match = -81.0%%
@@ -252,9 +252,9 @@ title = Idarubicine Treatment of Acute Myeloblastic Leukemia During ...
 url = https://www.jcog.com.tr/pdf/?pdf=d8ef007c2333e3bc22fd94ac0c236dcb
 
 [www.formatbiz.it]
-match = -95.2%%
-title = NEM Dubrovnik 2023, Day 2: record number of decision ...
-url = https://www.formatbiz.it/dettNews.aspx?id=10170
+match = -100.0%%
+title = Nem Dubrovnik unveils its 10 Keynote Speakers for 10 ...
+url = https://www.formatbiz.it/dettNews.aspx?id=9944
 
 [yro.slashdot.org]
 match = -114.3%%
