--- a/images/chieu-lac-d2-12/config.ini
+++ b/images/chieu-lac-d2-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-12.html
 lastopen = 2024-06-21 05:09:22
 
 [search]
-lastsearch = 2024-07-31 21:13:45
+lastsearch = 2024-07-31 22:34:17
 
 [agasound.vn]
 match = 6.7%%
@@ -54,7 +54,7 @@ url = https://www.lineabon.vn/product-page/lineabon-d3k2
 [www.diepxuan.com]
 match = 33.3%%
 title = Điệp Xuân Chiếu lác D2 12
-url = https://www.diepxuan.com/chieu-lac-d2-12.html
+url = https://www.diepxuan.com/chieu-lac-d2-12.html?srsltid=AfmBOopVjugPzq43rG_c7YCHgSCKLElN0kK39-3Ixbyey3DW-OBh3Qgg
 
 [shopee.vn]
 match = -146.7%%
