--- a/images/ga-chun-dreamland-180x200-ct/config.ini
+++ b/images/ga-chun-dreamland-180x200-ct/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/ga-chun-dreamland-180x200-ct.html
 lastopen = 2024-06-07 01:32:20
 
 [search]
-lastsearch = 2024-07-31 21:15:51
+lastsearch = 2024-07-31 22:38:09
 
 [demxanh.com]
 match = -42.9%%
-title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 01
-url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-01.html?srsltid=AfmBOopXrK5Y-o05SpT98qvnn59jee_u-ozLk7G2cq5E8OEE4T7e8sVS
+title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 20
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-20.html
 
 [www.diepxuan.com]
 match = -3.6%%
 title = Bộ chun chần WarmDream 180x200 lụa - Điệp Xuân
-url = https://www.diepxuan.com/bo-chun-chan-warmdream-180x200-lua.html?srsltid=AfmBOooCWJjw7dCG_Tgzr3zpKARlraB_jT3HA9MT5D0MMJ_HuzwMJy1N
+url = https://www.diepxuan.com/bo-chun-chan-warmdream-180x200-lua.html
 
 [mgaleg.maryland.gov]
 match = -75.0%%
@@ -112,9 +112,9 @@ title = Batavus greenparks kettingkast [V7seXc]
 url = http://www.responsinator.com/?aaa&ccode=0001&classname=产品展示&mnid=51918&url=https://xn--80abg0cjq.xn--p1ai/5368124sdzhrozytomskrufe5fe43y
 
 [archive.org]
-match = -7.1%%
-title = Schumann frequenz live stream [tKao2f]
-url = https://archive.org/help/video.php?identifier=1944-arsenic-and-old-lace-este-mundo-e-um-hospicio-frank-capra-legendado&ht=480&wd=640&url=https://xn--80afptqn.xn--p1ai/8723491wwwhuoyanbaocomze5fe43y
+match = 7.1%%
+title = Video help, tips, and techniques
+url = https://archive.org/help/video.php?identifier=1944-arsenic-and-old-lace-este-mundo-e-um-hospicio-frank-capra-legendado&ht=480&wd=640&url=https://xn-----6kcbaefdcuda3ajhb7addn3airdibd2ak4bf8a59a.xn--p1ai/ABCr79tfe8fe43z
 
 [www.semex.com]
 match = -32.1%%
