--- a/images/ga-chun-uc-16/config.ini
+++ b/images/ga-chun-uc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-uc-16.html
 lastopen = 2024-06-10 01:12:04
 
 [search]
-lastsearch = 2024-07-31 20:31:48
+lastsearch = 2024-07-31 22:33:11
 
 [bedding.vn]
 match = -123.1%%
@@ -37,9 +37,9 @@ title = Chun Lu
 url = https://scholar.google.co.uk/citations?user=ufM1QgQAAAAJ&hl=th
 
 [www.linkedin.com]
-match = -200.0%%
-title = Justin Chun - Irvine, California, United States
-url = https://www.linkedin.com/in/justin-chun-b9aa732b3
+match = -261.5%%
+title = Joon Chun - ISC Material Analysis - Honeywell Aerospace
+url = https://www.linkedin.com/in/joon-chun-0a807a90
 
 [hanvico.com.vn]
 match = -69.2%%
@@ -117,9 +117,9 @@ title = jack l. skinner, ph.d., pe
 url = https://www.mtech.edu/mechanical-engineering/faculty/jack-skinner/docs/cv-jack-skinner.pdf
 
 [researchdirectory.uc.edu]
-match = -261.5%%
-title = Expert Profile: Je Hyeong Bahk - UC Research Directory
-url = https://researchdirectory.uc.edu/p/bahkjg
+match = -323.1%%
+title = Changjoo Kim - UC Research Directory - University of Cincinnati
+url = https://researchdirectory.uc.edu/p/changjkm
 
 [thegioinem.com]
 match = -230.8%%
