--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-07-31 17:35:14
+lastsearch = 2024-07-31 22:36:23
 
 [www.georgianicols.com]
 match = -169.2%%
@@ -52,9 +52,9 @@ title = CDL Licensing Information FAQs | Georgia Department of ...
 url = https://dds.georgia.gov/cdl-licensing-information-faqs
 
 [www.instagram.com]
-match = -107.7%%
-title = Gani Lawal Jr. (@ganilawalspeaks)
-url = https://www.instagram.com/ganilawalspeaks/?hl=en
+match = -10.0%%
+title = sylviagani
+url = https://www.instagram.com/sylviagani/?hl=en
 
 [www.nebf.com]
 match = -50.0%%
@@ -660,4 +660,9 @@ url = https://www.uscg.mil/contact/
 match = -184.6%%
 title = Pet Travel From the United States to Georgia
 url = https://www.aphis.usda.gov/pet-travel/us-to-another-country-export/pet-travel-united-states-georgia
+
+[myfwc.com]
+match = -7.7%%
+title = Blue Crab | FWC
+url = https://myfwc.com/fishing/saltwater/recreational/blue-crab/
 
