--- a/images/man-tu-bung-dinh-vuong-16/config.ini
+++ b/images/man-tu-bung-dinh-vuong-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-16.html
 lastopen = 2024-06-06 16:41:48
 
 [search]
-lastsearch = 2024-07-31 20:22:47
+lastsearch = 2024-07-31 22:36:02
 
 [munghoangphat.com]
 match = -24.0%%
@@ -22,9 +22,9 @@ title = mùng chụp tự bung đỉnh vuông giá tốt Tháng 7, 2024
 url = https://shopee.vn/search?keyword=mùng chụp tự bung đỉnh vuông
 
 [www.mungbaobao.com]
-match = 48.0%%
-title = Mùng Chụp Tự Bung Đỉnh Vuông 1m6 x 2m
-url = https://www.mungbaobao.com/mung-chup-tu-bung-dinh-vuong-1m6-x-2m.html
+match = -32.0%%
+title = Mùng Bảo Bảo | Mùng Chụp Tự Bung Đỉnh Vuông Giá tốt 2024
+url = https://www.mungbaobao.com/
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -32,9 +32,9 @@ title = Màn tự bung dinh vuong 16
 url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-16.html
 
 [www.mantubung.com]
-match = -52.0%%
-title = Mùng Chụp | Màn Tự Bung Thông Minh Chống Muỗi | Khuyến ...
-url = https://www.mantubung.com/
+match = -8.0%%
+title = Màn Tự Bung ĐỈNH VUÔNG 1m8 x 2m - VIỀN CHÂN - 1 CỬA
+url = https://www.mantubung.com/man-tu-bung-dinh-vuong-1m8-x-2m-x-1m8-85258.html
 
 [demvip.vn]
 match = 52.0%%
@@ -44,7 +44,7 @@ url = https://demvip.vn/products/man-chup-tu-bung-dinh-vuong-cao-cap
 [www.lazada.vn]
 match = 4.0%%
 title = MÙNG CHỤP TỰ BUNG ĐỈNH VUÔNG MÀN CHỤP KIỂU ...
-url = https://www.lazada.vn/products/mung-chup-tu-bung-dinh-vuong-man-chup-kieu-dang-tien-loi-cho-cac-phong-ngu-i1921294227.html?srsltid=AfmBOorwzu-WdBvW6SC_uBtrEJ8CeDLm8UjE93JOmCDjLvWr001bPufu
+url = https://www.lazada.vn/products/mung-chup-tu-bung-dinh-vuong-man-chup-kieu-dang-tien-loi-cho-cac-phong-ngu-i1921294227.html
 
 [everonvn.com.vn]
 match = 0.0%%
