CI images update

--- a/images/chieu-truc-thai-den15/config.ini
+++ b/images/chieu-truc-thai-den15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den15.html
 lastopen = 2024-06-07 00:18:02
 
 [search]
-lastsearch = 2024-07-31 20:00:03
+lastsearch = 2024-07-31 22:50:05
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -37,14 +37,14 @@ title = Bảng giá chiếu Thái Lan dòng gấp vân gỗ cao cấp
 url = https://chieutruc.info/chieu-thai-lan-gap-van-go/
 
 [ipvietnam.gov.vn]
-match = -142.9%%
-title = Bảo hộ Chỉ dẫn địa lý "Cao Bằng" cho sản phẩm trúc sào và ...
-url = https://ipvietnam.gov.vn/en_US/web/guest/tin-tuc-su-kien/-/asset_publisher/7xsjBfqhCDAV/content/bao-ho-chi-dan-ia-ly-cao-bang-cho-san-pham-truc-sao-va-chieu-truc-s-1/pop_up?_101_INSTANCE_7xsjBfqhCDAV_viewMode=print
+match = -133.3%%
+title = Bảo hộ Chỉ dẫn địa lý “Cao Bằng” cho sản phẩm trúc sào ...
+url = https://ipvietnam.gov.vn/tin-tuc-su-kien/-/asset_publisher/7xsjBfqhCDAV/content/bao-ho-chi-dan-ia-ly-cao-bang-cho-san-pham-truc-sao-va-chieu-truc-s-2/pop_up?_101_INSTANCE_7xsjBfqhCDAV_viewMode=print
 
 [chieutrelanlan.com]
-match = -19.0%%
-title = Chiếu trúc Việt nam - Thương hiệu Lan Lan
-url = https://chieutrelanlan.com/chieu-truc-p17.html
+match = -114.3%%
+title = Chiếu trúc thương hiệu Việt Nam, chất lượng tốt - Bảo hành ...
+url = https://chieutrelanlan.com/
 
 [thegioidemviet.vn]
 match = -23.8%%
@@ -123,8 +123,8 @@ url = https://tapchinganhang.gov.vn/nang-cao-bao-mat-an-toan-giao-dich-khong-tie
 
 [baomoi.com]
 match = -104.8%%
-title = Ban An toàn giao thông tỉnh làm việc với UBND huyện ...
-url = https://baomoi.com/ban-an-toan-giao-thong-tinh-lam-viec-voi-ubnd-huyen-muong-khuong-c49708239.epi
+title = Bắc Ninh có tân Chủ tịch HĐND tỉnh và Chủ tịch UBND tỉnh
+url = https://baomoi.com/bac-ninh-co-tan-chu-tich-hdnd-tinh-va-chu-tich-ubnd-tinh-c49782365.epi
 
 [suckhoedoisong.vn]
 match = -109.5%%
@@ -252,9 +252,9 @@ title = Ngôi nhà điên nhưng con người thì không điên
 url = https://www.tapchikientruc.com.vn/tac-gia-tac-pham/ngoi-nha-dien-nhung-con-nguoi-thi-khong-dien.html
 
 [m.facebook.com]
-match = -4.8%%
-title = TUYỂN DỤNG FREELANCER - HR
-url = https://m.facebook.com/groups/hrtuyendungcnns/posts/8383344758356164/
+match = -123.8%%
+title = Hiện nay, Hội Anh Em Dân Chủ vẫn đang phải đối mặt với ...
+url = https://m.facebook.com/datvietdotcom/photos/hiện-nay-hội-anh-em-dân-chủ-vẫn-đang-phải-đối-mặt-với-sự-đàn-áp-mạnh-mẽ-nhiều-th/808840614706197/
 
 [tuoitre.vn]
 match = -104.8%%
@@ -327,8 +327,8 @@ title = Sản Xuất Mành Tre Trúc Tại Ninh Bình - 0908202799
 url = https://www.facebook.com/p/Sản-Xuất-Mành-Tre-Trúc-Tại-Ninh-Bình-0908202799-100022213401673/
 
 [dienmaycholon.com]
-match = -104.8%%
-title = Mua quạt điều hòa, máy làm mát không khí trả góp ...
+match = -123.8%%
+title = Mua quạt điều hòa, máy làm mát không khí trả góp 0%%, ...
 url = https://dienmaycholon.com/may-lam-mat-quat-dieu-hoa
 
 [baoquangninh.vn]
@@ -530,4 +530,9 @@ url = https://congly.vn/7-thang-nam-2024-viet-nam-thu-1-08-ty-usd-tu-xuat-khau-x
 match = -109.5%%
 title = Ông Vương Quốc Tuấn được bầu làm Chủ tịch UBND tỉnh ...
 url = https://danviet.vn/uy-vien-du-khuyet-trung-uong-dang-vuong-quoc-tuan-duoc-bau-lam-chu-tich-ubnd-tinh-bac-ninh-20240731111020077.htm
+
+[www.xaydungdang.org.vn]
+match = -104.8%%
+title = Bắc Ninh có tân Chủ tịch HĐND tỉnh và Chủ tịch UBND tỉnh
+url = https://www.xaydungdang.org.vn/nhan-su-moi/bac-ninh-co-tan-chu-tich-hdnd-tinh-va-chu-tich-ubnd-tinh-21333
 
