--- a/images/chan-5-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-5-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-10 00:08:59
 
 [search]
-lastsearch = 2024-07-31 20:38:48
+lastsearch = 2024-07-31 22:46:14
 
 [h5.lazada.vn]
 match = -11.1%%
@@ -22,9 +22,9 @@ title = Chăn Tuyết Nhung 5kg Giá Tốt T05/2024
 url = https://www.lazada.vn/tag/chan-tuyet-nhung-5kg/
 
 [tiki.vn]
-match = -18.5%%
-title = Chăn nhung tuyết dày 5kg hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=chăn nhung tuyết dày 5kg
+match = -3.7%%
+title = Chăn tuyết nhung hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=chăn tuyết nhung
 
 [demxanh.com]
 match = -18.5%%
@@ -37,9 +37,9 @@ title = Mền Tuyết NIN - Liac Snow
 url = https://ninhouse.vn/products/men-tuyet-nin-liac-snow
 
 [www.youtube.com]
-match = -74.1%%
-title = Cựu Thủ tướng Thái Lan Thaksin được trả tự do - Tin thế giới ...
-url = https://www.youtube.com/watch?v=zGtjB2l6au4
+match = -66.7%%
+title = chăn tuyết thái lan giá rẻ - Chăn lông tuyết - Shop Sắc Mai ...
+url = https://www.youtube.com/watch?v=XHN7YU5NYi4
 
 [baodaknong.vn]
 match = -7.4%%
