--- a/images/chieu-lac-d2-16/config.ini
+++ b/images/chieu-lac-d2-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-lac-d2-16.html
 lastopen = 2024-06-06 16:54:08
 
 [search]
-lastsearch = 2024-07-31 22:13:34
+lastsearch = 2024-07-31 22:50:46
 
 [vinatools.com]
 match = -140.0%%
 title = Kéo cắt tôn dày 1.0mm kiểu dáng cổ điển Bessey
-url = https://vinatools.com/keo-cat-ton-d-216-116/
+url = https://vinatools.com/keo-cat-ton-d-216-116/?srsltid=AfmBOorjHFy9yOIu6q2-z2gYMgVhlwdnfSPRV4BofMvfiAeRjtx-GVCC
 
 [www.vietnamairport.vn]
 match = -213.3%%
