--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-07-31 20:45:46
+lastsearch = 2024-07-31 22:49:44
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -187,9 +187,9 @@ title = 974 người theo dõi trên Pinterest - Petal Designs
 url = https://petaldesigns.co.za/ảnh-cặc-to-anime.html
 
 [m.facebook.com]
-match = -206.2%%
-title = Anh Em United - Martin đá ghi 32 bàn chỉ sau 18 trận U18 ...
-url = https://m.facebook.com/100087119453381/photos/461709393409705/
+match = -131.2%%
+title = LỄ BỐC THĂM CHIA CẶP VÒNG TUYỂN CHỌN AIMAG ...
+url = https://m.facebook.com/caothuLQM/photos/-1800-hôm-nay-lễ-bốc-thăm-chia-cặp-vòng-tuyển-chọn-aimag-2021-bộ-môn-liên-quân-m/1022314476231200/
 
 [baomoi.com]
 match = -193.8%%
@@ -660,4 +660,14 @@ url = https://thanhnien.vn/thoi-trang-tre/nhung-vay-ao-don-gian-nhung-xa-hoa-ai-
 match = -43.8%%
 title = Phim Nóng Nữ Cảnh Tính Hay đồng
 url = https://kristin-gildemeister.de/479436-nữ-hay-tính-nóng-cảnh-đồng-phim.html
+
+[hunglien.net]
+match = 37.5%%
+title = Chiếu lạc - Hưng Liên
+url = http://hunglien.net/san-pham/chieu-lac/
+
+[vba.vn]
+match = -27.3%%
+title = Saigon Heat
+url = https://vba.vn/clubs/saigon-heat
 
