--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-07-31 21:56:54
+lastsearch = 2024-07-31 22:56:22
 
 [en.wikipedia.org]
-match = -12.5%%
-title = Gwangju Uprising
-url = https://en.wikipedia.org/wiki/Gwangju_Uprising
+match = 10.0%%
+title = Anti-Korean sentiment
+url = https://en.wikipedia.org/wiki/Anti-Korean_sentiment
 
 [peacehistory-usfp.org]
 match = -45.0%%
