--- a/images/tam-trai-ks-uc-220-250/config.ini
+++ b/images/tam-trai-ks-uc-220-250/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks-uc-220-250.html
 lastopen = 2024-06-07 01:32:07
 
 [search]
-lastsearch = 2024-07-31 17:27:59
+lastsearch = 2024-07-31 22:54:15
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -167,9 +167,9 @@ title = La souris noire morlaix [thVqRd]
 url = https://www.nitrc.org/links/?group_id=51&url=https://9215487.xn--h1aakbimdbl.xn--p1ai/5428367u6fe43a
 
 [www.ncbi.nlm.nih.gov]
-match = -113.6%%
-title = Molecular Biology of Lung Cancer: Clinical Implications
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3367865/
+match = -127.3%%
+title = Extracellular vesicles and particles impact the systemic ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9475536/
 
 [www.gsa.gov]
 match = -185.7%%
