CI images update

--- a/images/tham-giuong-bo-de-14/config.ini
+++ b/images/tham-giuong-bo-de-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-14.html
 lastopen = 2024-06-10 01:25:14
 
 [search]
-lastsearch = 2024-07-31 21:42:41
+lastsearch = 2024-07-31 23:21:22
 
 [erado.vn]
 match = 5.0%%
 title = Giường da hạng sang mã DV14
-url = https://erado.vn/giuong-dang-giam-gia/giuong-da-hang-sang-ma-dv14.html
+url = https://erado.vn/giuong-dang-giam-gia/giuong-da-hang-sang-ma-dv14.html?srsltid=AfmBOormnoJFyHJ_ZSdHE3_31rb3TOz4A4eZZoYox36hodQ2bXP9GIzV
 
 [shopee.vn]
 match = -105.0%%
@@ -134,7 +134,7 @@ url = https://inoacliving.vn/blog/kich-thuoc-nem-tieu-chuan/
 [sofatoanquoc.com]
 match = -65.0%%
 title = Giường Ngủ Bọc Vải Mã 14 - Sofa Toàn Quốc
-url = https://sofatoanquoc.com/giuong-ngu-boc-vai-ma-14.html
+url = https://sofatoanquoc.com/giuong-ngu-boc-vai-ma-14.html?srsltid=AfmBOorwg7HlT8ak6ftIg-3QrGMM_uHd-OC5mVqcIVWYEX7KZ3Kj9gp0
 
 [sofaphongkhach.vn]
 match = -40.0%%
@@ -169,7 +169,7 @@ url = https://dogohiephien.vn/giuong-go-dep/
 [noithatcaco.vn]
 match = -110.0%%
 title = Giường ngủ hiện đại đẹp giá rẻ 100+ mẫu mới 09/2024
-url = https://noithatcaco.vn/collections/giuong-ngu
+url = https://noithatcaco.vn/collections/giuong-ngu?srsltid=AfmBOorJ-zkOYDdC4VnwfamsR7D9iLQChIRYQm3GeqSJ3ym6QTshbGhy
 
 [noithatminhtan.com]
 match = 5.0%%
