--- a/images/tui-korea-16/config.ini
+++ b/images/tui-korea-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-16.html
 lastopen = 2024-06-17 10:42:33
 
 [search]
-lastsearch = 2024-07-31 22:30:43
+lastsearch = 2024-07-31 23:29:17
 
 [www.cfd-online.com]
 match = -266.7%%
@@ -17,8 +17,8 @@ title =
 url = https://en.wikipedia.org/wiki/TUI_Group
 
 [www.tuigroup.com]
-match = -316.7%%
-title = The one of the world's leading tourism groups - TUI Group
+match = -300.0%%
+title = TUI Group – The one of the world's leading tourism groups
 url = https://www.tuigroup.com/en-en
 
 [www.tui.nl]
@@ -107,8 +107,8 @@ title = TUI Hotels & Resorts shares green recommendations to ...
 url = https://www.ttgasia.com/2023/06/16/tui-hotels-resorts-shares-green-recommendations-to-drive-sustainable-hospitality/
 
 [www.tui.co.uk]
-match = -250.0%%
-title = TUI.co.uk | Holidays, Flights & Cruises 2024 / ...
+match = -258.3%%
+title = TUI.co.uk | Holidays, Flights & Cruises 2024 / 2025
 url = https://www.tui.co.uk/
 
 [maritime-executive.com]
@@ -287,8 +287,8 @@ title = TUI
 url = https://hk.linkedin.com/company/tuigroup?trk=public_profile_experience-item_profile-section-card_image-click
 
 [tui-magic-life-adults-only-16.aegeanhotelspage.com]
-match = -291.7%%
-title = Tui Magic Life Bodrum - Adults Only (16+) - Aegean Region
+match = -308.3%%
+title = Resort Tui Magic Life Bodrum - Adults Only (16+) Bodrum ...
 url = https://tui-magic-life-adults-only-16.aegeanhotelspage.com/en/
 
 [www.airliners.net]
