--- a/images/bo-ga-goi-chun-xoa-14/config.ini
+++ b/images/bo-ga-goi-chun-xoa-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-14.html
 lastopen = 2024-06-09 23:12:23
 
 [search]
-lastsearch = 2024-07-31 22:47:19
+lastsearch = 2024-07-31 23:15:52
 
 [hanvico.com.vn]
 match = 28.6%%
-title = Bộ ga chun LIVING - LV55
-url = https://hanvico.com.vn/san-pham/lv55/
+title = Bộ ga chun LIVING - LV45
+url = https://hanvico.com.vn/san-pham/bo-ga-chun-living-lv45/
 
 [www.diepxuan.com]
 match = -4.8%%
@@ -17,9 +17,9 @@ title = Điệp Xuân Bộ chăn ga gối màu xoa tin 14
 url = https://www.diepxuan.com/bo-chan-ga-goi-mau-xoa-tin-14.html
 
 [lasantevn.com]
-match = -57.1%%
-title = BỘ CHĂN GA KẺ CARO MODAL 14 - La Sante Việt Nam
-url = https://lasantevn.com/bo-chan-ga-ke-caro-modal-14/
+match = -95.2%%
+title = BỘ CHĂN GA LASANTE PHÁP - LAN TÂY - La Sante Việt Nam
+url = https://lasantevn.com/bo-chan-ga-hoa-lan-tay-lasante-phap/
 
 [chandem.com.vn]
 match = 33.3%%
@@ -32,9 +32,9 @@ title = Bộ chăn ga gối TTN 14 (120*190 cm) - Koala
 url = https://koala.vn/bo-chan-ga-goi-ttn-14.html
 
 [changagoidemsonghong.com]
-match = -42.9%%
-title = Bộ chăn ga gối cotton 100%% dòng Basic mã BC-29
-url = https://changagoidemsonghong.com/chan-ga-goi-bc29
+match = -28.6%%
+title = Bộ chăn ga gối 100%% cotton mã mầu BC22-061
+url = https://changagoidemsonghong.com/chan-ga-goi-bc61
 
 [songhong.info]
 match = -19.0%%
@@ -52,9 +52,9 @@ title = Bộ chăn ga gối Everon Lite EVE14
 url = https://everonletrongtan.com/bo-chan-ga-goi-everon-lite-eve14
 
 [foreverbedding.net]
-match = -33.3%%
-title = Bộ ga chun Velina V14 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-chun-velina-v14
+match = -66.7%%
+title = Bộ ga chun chần mặt Velina V20 - Forever Bedding
+url = https://foreverbedding.net/bo-ga-chun-chan-mat-velina-v20
 
 [changmibedding.com]
 match = -33.3%%
