--- a/images/chieu-dieu-hoa-co-goi-15/config.ini
+++ b/images/chieu-dieu-hoa-co-goi-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-15.html
 lastopen = 2024-06-06 16:54:53
 
 [search]
-lastsearch = 2024-07-31 20:49:36
+lastsearch = 2024-07-31 23:23:26
 
 [shopee.vn]
-match = -41.7%%
-title = Chiếu mây điều hòa các kích thước 1.5m-1.6m-1.8m-2.2x2m
-url = https://shopee.vn/Chiếu-mây-điều-hòa-các-kích-thước-1.5m-1.6m-1.8m-2.2x2m-i.26249437.338321510
+match = -37.5%%
+title = Chiếu mây điều hòa Lidaco loại dày cực mát cho ngày hè
+url = https://shopee.vn/Chiếu-mây-điều-hòa-Lidaco-loại-dày-cực-mát-cho-ngày-hè-i.352833469.4282665950
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -67,9 +67,9 @@ title = Nằm chiếu điều hoà có tốt cho sức khoẻ không?
 url = https://thegioinem.com/nam-chieu-dieu-hoa-co-tot-cho-suc-khoe-khong.html
 
 [foreverbedding.net]
-match = -20.8%%
-title = Nằm Chiếu Điều Hòa Có Mát Không? - Forever Bedding
-url = https://foreverbedding.net/nam-chieu-dieu-hoa-co-mat-khong
+match = 37.5%%
+title = Chiếu điều hòa - Forever Bedding
+url = https://foreverbedding.net/chieu-dieu-hoa
 
 [joliefam.vn]
 match = -37.5%%
