--- a/images/chieu-du-lich-18/config.ini
+++ b/images/chieu-du-lich-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-du-lich-18.html
 lastopen = 2024-06-09 21:46:31
 
 [search]
-lastsearch = 2024-07-31 18:44:08
+lastsearch = 2024-07-31 23:30:59
 
 [helloviettravel.com]
 match = -181.2%%
@@ -32,9 +32,9 @@ title = Du Lịch USA và Thế Giới
 url = https://www.facebook.com/groups/dulichusavathegioi/
 
 [vinpearl.com]
-match = -187.5%%
-title = Điểm du lịch Khánh Hòa – List 18 “TỌA ĐỘ” không thể bỏ ...
-url = https://vinpearl.com/vi/list-18-diem-du-lich-khanh-hoa-dep-xieu-long-khong-the-bo-qua
+match = -156.2%%
+title = Hé lộ “tọa độ” 18 địa điểm du lịch Nghệ An HOT nhất!
+url = https://vinpearl.com/vi/he-lo-toa-do-18-dia-diem-du-lich-nghe-an-hot-nhat
 
 [thegioixecau.vn]
 match = -150.0%%
@@ -42,9 +42,9 @@ title = XE THAM QUAN DU LỊCH 2, 4, 6, 8, 11, 14, 18,...23 CHỖ
 url = https://thegioixecau.vn/xe-tham-quan-du-lich-2-4-6-8-11-14-18-23-cho
 
 [www.youtube.com]
-match = 12.5%%
-title = Bản tin Du lịch 18/7/2024
-url = https://www.youtube.com/watch?v=JPdEyoI0u4Y
+match = -143.8%%
+title = KINH DỊ 18 TẦNG ĐỊA NGỤC KHU DU LỊCH SUỐI TIÊN 2024
+url = https://www.youtube.com/watch?v=Z5uq2IjfDD8
 
 [badenmountain.sunworld.vn]
 match = -212.5%%
@@ -92,9 +92,9 @@ title = 42 Địa Điểm Du Lịch Gần Sài Gòn Cho Cuối Tuần Năng ...
 url = https://www.klook.com/vi/blog/diem-du-lich-gan-sai-gon/
 
 [dulichviet.com.vn]
-match = -181.2%%
-title = Du lịch nước ngoài - Danh sách các tour du lịch nước ngoài
-url = https://dulichviet.com.vn/du-lich-nuoc-ngoai
+match = -206.2%%
+title = Tour du lịch Miền Tây - Top 18 địa điểm hấp dẫn du khách ...
+url = https://dulichviet.com.vn/tin-tuc/tour-du-lich-mien-tay-top-18-dia-diem-hap-dan-du-khach-nhat
 
 [www.bestprice.vn]
 match = -212.5%%
