--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-07-31 16:27:29
+lastsearch = 2024-07-31 23:16:32
 
 [batdongsan.com.vn]
 match = -193.3%%
@@ -47,9 +47,9 @@ title = https://www.google.com/maps/@10.8519007,106.629377...
 url = https://www.google.com/maps/@10.8519007,106.6293774,16.92z?hl=vi-VN
 
 [www.youtube.com]
-match = -226.7%%
-title = Cơm nhà nói chung là êm - Nhà thơ Nhược Lạc | Have a Sip ...
-url = https://www.youtube.com/watch?v=dK9ilBQMYv0
+match = -160.0%%
+title = Review Hồ Bơi CLB Thể Thao Celadon Quận Tân Phú
+url = https://www.youtube.com/watch?v=n_UEjKrQoCc
 
 [www.diepxuan.com]
 match = 33.3%%
@@ -57,9 +57,9 @@ title = Điệp Xuân Chiếu lác D2 08
 url = https://www.diepxuan.com/chieu-lac-d2-08.html
 
 [www.facebook.com]
-match = -213.3%%
-title = Black Kingdom - D2 - CÔNG BỐ GIẢI ĐẤU OFFLINE MANG ...
-url = https://www.facebook.com/photo.php?fbid=925380399591113&id=100063574839369&set=a.647966903999132
+match = -126.7%%
+title = Celadon Sports & Resort Club - Facebook
+url = https://www.facebook.com/CeladonSRC/photos/️chỉ-còn-2-buổi-tập-nữa-chương-trình-burn-it-up-mùa-2-sẽ-kết-thúcchương-trình-bu/3097734877138264/
 
 [lacvietauction.vn]
 match = -80.0%%
