--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-07-31 22:36:23
+lastsearch = 2024-07-31 23:28:37
 
 [www.georgianicols.com]
 match = -169.2%%
@@ -37,9 +37,9 @@ title = Northwest Georgia Scanner
 url = https://www.facebook.com/NWGAScanner/
 
 [www.youtube.com]
-match = -146.2%%
-title = The Gummy Bear Song - Long English Version
-url = https://www.youtube.com/watch?v=astISOttCQ0
+match = -230.8%%
+title = The Gummy Bear Song - Long English Version - Gummibär
+url = https://www.youtube.com/watch?v=mB1PuesGGBc
 
 [www.regmovies.com]
 match = -215.4%%
@@ -52,9 +52,9 @@ title = CDL Licensing Information FAQs | Georgia Department of ...
 url = https://dds.georgia.gov/cdl-licensing-information-faqs
 
 [www.instagram.com]
-match = -10.0%%
-title = sylviagani
-url = https://www.instagram.com/sylviagani/?hl=en
+match = -107.7%%
+title = Gani Lawal Jr. (@ganilawalspeaks)
+url = https://www.instagram.com/ganilawalspeaks/?hl=en
 
 [www.nebf.com]
 match = -50.0%%
