--- a/images/man-in-hoa-dep-14/config.ini
+++ b/images/man-in-hoa-dep-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-14.html
 lastopen = 2024-06-10 00:17:58
 
 [search]
-lastsearch = 2024-07-31 16:50:47
+lastsearch = 2024-07-31 23:29:37
 
 [www.rockawayinc.com]
 match = 0.0%%
@@ -24,7 +24,7 @@ url = https://www.nixonpeabody.com/insights/alerts/2024/05/08/do-hoas-have-to-re
 [www.flsenate.gov]
 match = -129.4%%
 title = Chapter 720 Section 303 - 2018 Florida Statutes
-url = https://www.flsenate.gov/laws/statutes/2018/720.303
+url = https://www.flsenate.gov/Laws/Statutes/2018/0720.303
 
 [www.doorloop.com]
 match = 0.0%%
@@ -32,9 +32,9 @@ title =
 url = https://www.doorloop.com/laws/georgia-hoa-laws
 
 [www.reddit.com]
-match = -35.3%%
-title = Can HOA come onto my property?
-url = https://www.reddit.com/r/HOA/comments/xqmjl8/can_hoa_come_onto_my_property/
+match = -141.2%%
+title = anyone know how to find who the HOA president is? ...
+url = https://www.reddit.com/r/fuckHOA/comments/10lkjnf/anyone_know_how_to_find_who_the_hoa_president_is/
 
 [spectrumam.com]
 match = -76.5%%
@@ -42,9 +42,9 @@ title = HOA Bylaws, HOA Regulations, and CC&Rs
 url = https://spectrumam.com/everything-you-need-to-know-about-hoa-bylaws-regulations-and-ccrs/
 
 [www.quora.com]
-match = -200.0%%
-title = My neighbor is constantly doing things that violate our HOA ...
-url = https://www.quora.com/My-neighbor-is-constantly-doing-things-that-violate-our-HOA-agreement-what-can-I-do
+match = -176.5%%
+title = Can my HOA fine me if they haven't explained what I've ...
+url = https://www.quora.com/Can-my-HOA-fine-me-if-they-haven-t-explained-what-I-ve-done-wrong-They-sent-me-a-picture-2-weeks-ago-of-my-property-with-zero-context-or-explanation-of-what-s-wrong-Today-I-received-a-fine-Again-with-zero
 
 [www.hopb.co]
 match = -141.2%%
@@ -515,4 +515,9 @@ url = https://www.azoca.gov/resources/faqs/open-meetings-law-faq/
 match = -111.8%%
 title = HB1203, HB59 & HB293 to Affect Florida HOAs
 url = https://www.ralaw.com/media/insights/Community Association Law Alert/hb1203_hb59_and_hb293_to_affect_florida_hoas
+
+[www.siegfriedrivera.com]
+match = -58.8%%
+title = Florida Governor Signs House Bill 1203
+url = https://www.siegfriedrivera.com/blog/florida-governor-signs-house-bills-1203-into-law/
 
