--- a/images/man-tu-bung-18/config.ini
+++ b/images/man-tu-bung-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-18.html
 lastopen = 2024-06-10 00:37:41
 
 [search]
-lastsearch = 2024-07-31 21:27:35
+lastsearch = 2024-07-31 23:15:10
 
 [shopee.vn]
 match = -171.4%%
@@ -32,9 +32,9 @@ title = Mùng Chụp | Màn Tự Bung Thông Minh Chống Muỗi | Khuyến ...
 url = https://www.mantubung.com/
 
 [www.lazada.vn]
-match = -164.3%%
-title = Màn chụp tự bung đỉnh vuông Cao Cấp. Mùng gấp ...
-url = https://www.lazada.vn/products/man-chup-tu-bung-dinh-vuong-cao-cap-mung-gap-dinh-vuong-co-chan-vien-gia-tan-xuong-bh-18-thang-i1643502299.html
+match = -242.9%%
+title = màn tự bung hàng cao cấp, nhiều kích thước, gấp gọn tiện ...
+url = https://www.lazada.vn/products/man-chup-tu-bung-dinh-vuong-gia-xuong-hang-viet-nam-100-bao-hanh-18-thang-man-tu-bung-hang-cao-cap-nhieu-kich-thuoc-gap-gon-tien-dung-chong-muoi-hieu-qua-i1531214550.html
 
 [www.mungbaobao.com]
 match = -214.3%%
@@ -42,9 +42,9 @@ title = Mùng Bảo Bảo | Mùng Chụp Tự Bung Đỉnh Vuông Giá tốt 202
 url = https://www.mungbaobao.com/
 
 [www.bible.com]
-match = -128.6%%
-title = LUKA 18 | MIZCLBSI Bible | YouVersion
-url = https://www.bible.com/bible/1048/LUK.18.MIZCLBSI
+match = -142.9%%
+title = THUPUAN 18 | MIZOVBSI Bible | YouVersion
+url = https://www.bible.com/bible/253/REV.18.MIZOVBSI
 
 [mungchup.com]
 match = -164.3%%
