--- a/images/ruot-goi-ke-everhome-mong/config.ini
+++ b/images/ruot-goi-ke-everhome-mong/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-everhome-mong.html
 lastopen = 2024-06-10 00:15:54
 
 [search]
-lastsearch = 2024-07-31 22:28:41
+lastsearch = 2024-07-31 23:22:44
 
 [everhomevietnam.com]
 match = 12.0%%
@@ -17,9 +17,9 @@ title = Ruột gối đơn siêu nhẹ Sông Hồng Collection chính hãng!
 url = https://sieuthidemonline.vn/ruot-goi-don-song-hong/
 
 [demxanh.com]
-match = -44.0%%
-title = Top 9 loại gối cho người nằm ngửa tốt nhất 2024
-url = https://demxanh.com/goi-cho-nguoi-nam-ngua-tot-nhat.html
+match = -64.0%%
+title = Đệm Xanh-Chuỗi Cửa Hàng Bán Chăn Ga Gối Đệm hàng đầu
+url = https://demxanh.com/?srsltid=AfmBOoqrb2gZX2LEhRJj8ci0Ivucigr7V_MHUlO1BmKAXRKxeh2W1-Yj
 
 [khodem.vn]
 match = 8.0%%
@@ -114,7 +114,7 @@ url = https://demeverhome.com/san-pham/ruot-goi/
 [thegioidemonline.com]
 match = 4.0%%
 title = Bảng giá chăn ga gối Everhome năm 2022
-url = https://thegioidemonline.com/bang-gia-chan-ga-goi-everhome-nam-2020.html
+url = https://thegioidemonline.com/bang-gia-chan-ga-goi-everhome-nam-2020.html?srsltid=AfmBOoos_6anOkeE_iokt3wwfMyf0Xwr7ezBD8cAP_95bQ4qWiiHwt-L
 
 [thegioidemdep.com]
 match = -24.0%%
