CI images update

--- a/images/chan-long-muji/config.ini
+++ b/images/chan-long-muji/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-long-muji.html
 lastopen = 2024-07-01 21:12:38
 
 [search]
-lastsearch = 2024-07-31 23:14:49
+lastsearch = 2024-07-31 23:48:37
 
 [www.muji.com]
-match = 7.1%%
-title = chăn lông nhung xám mỏng
-url = https://www.muji.com/vn/vi/shop/000101/articles/recommend/1221
+match = -33.3%%
+title = RUỘT CHĂN
+url = https://www.muji.com/vn/products/section/E30001
 
 [thegioidemviet.vn]
 match = -192.9%%
@@ -170,4 +170,9 @@ url = https://www.ryohin-keikaku.jp/eng/about-muji/whatismuji/
 match = 0.0%%
 title = 
 url = https://www.webmd.com/pets/dogs/what-to-know-about-japanese-chins#:~:text=The Japanese Chin lifespan is,if not given proper attention.
+
+[sourcingjournal.com]
+match = 0.0%%
+title = 
+url = https://sourcingjournal.com/topics/labor/muji-xinjiang-cotton-forced-labor-japan-singapore-adrian-zenz-cbp-uyghur-356740/
 
