--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-07-31 14:36:20
+lastsearch = 2024-07-31 23:45:02
 
 [scholar.google.com]
 match = -43.8%%
@@ -108,13 +108,13 @@ url = http://hunglien.net/san-pham/chieu-lac/
 
 [primagold.com.vn]
 match = -231.2%%
-title = Giá vàng 9999 hôm nay tại 64 tỉnh 29/7/2024 | Bảng giá vàng
+title = Giá vàng 9999 hôm nay tại 64 tỉnh 31/7/2024 | Bảng giá vàng
 url = https://primagold.com.vn/
 
 [www.youtube.com]
-match = -181.2%%
-title = 18 BƯỚC 💥 Modern Tacking CỰC ĐẸP // CÓ HƯỚNG DẪN Ở ...
-url = https://www.youtube.com/watch?v=PWk3nmCXI0k
+match = -243.8%%
+title = Ngôi làng toàn “người khổng lồ” ở Việt Nam cực ít người biết ...
+url = https://www.youtube.com/watch?v=6u1GU8_6GQI
 
 [books.google.com]
 match = -156.2%%
@@ -492,9 +492,9 @@ title = Huyện Bảo Lạc thăm, tặng quà các gia đình chính sách
 url = http://caobangtv.vn/tin-tuc-n75384/huyen-bao-lac-tham-tang-qua-cac-gia-dinh-chinh-sach.html
 
 [vietnamnet.vn]
-match = -175.0%%
-title = Nữ diễn viên kém 18 tuổi nói về nụ hôn với Việt Anh
-url = https://vietnamnet.vn/nu-dien-vien-kem-18-tuoi-noi-ve-nu-hon-voi-viet-anh-2303486.html
+match = -237.5%%
+title = Nhóm 6 đối tượng dưới 18 tuổi bị khởi tố trong vụ án giết ...
+url = https://vietnamnet.vn/nhom-6-doi-tuong-duoi-18-tuoi-bi-khoi-to-trong-vu-an-giet-nguoi-2307455.html
 
 [baobinhphuoc.com.vn]
 match = -212.5%%
