--- a/images/tham-giuong-bo-de-18/config.ini
+++ b/images/tham-giuong-bo-de-18/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-18.html
 lastopen = 2024-06-09 22:57:01
 
 [search]
-lastsearch = 2024-07-31 22:48:21
+lastsearch = 2024-07-31 23:45:45
 
 [erado.vn]
 match = 0.0%%
 title = Giường ngủ da hạng sang mã 18
-url = https://erado.vn/giuong-giam-gia/giuong-ngu-da-hang-sang-ma-18.html
+url = https://erado.vn/giuong-dang-giam-gia/giuong-ngu-da-hang-sang-ma-18.html
 
 [shopee.vn]
-match = -70.0%%
-title = giường xếp giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=giường xếp
+match = -105.0%%
+title = Giường xếp - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
+url = https://shopee.vn/list/giường xếp
 
 [h5.lazada.vn]
 match = -5.0%%
@@ -132,9 +132,9 @@ title = Tổng Hợp Các Mẫu Giường Quân Đội Bền Đẹp Nhất Hiệ
 url = https://noithattamviet.net/cam-nang/tong-hop-cac-mau-giuong-quan-doi-ben-dep-nhat-hien-nay
 
 [noithatcaco.vn]
-match = -115.0%%
-title = Giường ngủ hiện đại đẹp giá rẻ 100+ mẫu mới 09/2024
-url = https://noithatcaco.vn/collections/giuong-ngu
+match = -135.0%%
+title = 65 Mẫu giường ngủ trẻ em bé trai bé gái - Thiết kế siêu xinh
+url = https://noithatcaco.vn/collections/giuong-ngu-tre-em
 
 [sofahome.vn]
 match = 25.0%%
@@ -245,4 +245,9 @@ url = https://sofatoanquoc.com/giuong-ngu-boc-vai-ma-18.html
 match = -50.0%%
 title = Giường gấp 3 khúc có nệm B90- rộng 90cm
 url = https://giuonggapvietnhat.vn/giuong-gap-3-khuc-co-nem-b90-rong-90cm-html.html
+
+[dienmaycholon.com]
+match = -80.0%%
+title = Sofa Giường Royal H18S02 174CM giá rẻ, giao ngay
+url = https://dienmaycholon.com/sofa/sofa-giuong-royal-h18s02-174cm
 
