--- a/images/tham-giuong-bode-150x190/config.ini
+++ b/images/tham-giuong-bode-150x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-bode-150x190.html
 lastopen = 2024-06-17 17:46:25
 
 [search]
-lastsearch = 2024-07-31 20:45:25
+lastsearch = 2024-07-31 23:46:48
 
 [www.diepxuan.com]
 match = 37.5%%
 title = Thảm giường Bode 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/tham-giuong-bode-160x200.html?srsltid=AfmBOoocDCQxFQMzr_9zAFVvkOwc0UFjrBQnCmtO5QTD8BsTKpWJ6foF
+url = https://www.diepxuan.com/tham-giuong-bode-160x200.html
 
 [www.tripadvisor.com]
 match = -112.5%%
