CI images update

--- a/images/tui-singapore15/config.ini
+++ b/images/tui-singapore15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-singapore15.html
 lastopen = 2024-06-10 00:27:49
 
 [search]
-lastsearch = 2024-07-31 22:28:00
+lastsearch = 2024-07-31 23:45:57
 
 [www.tui.co.uk]
 match = -86.7%%
@@ -242,7 +242,7 @@ title = Bags That Get It - Work Bags & Travel Bags
 url = https://www.dagnedover.com/
 
 [www.intercruises.com]
-match = -100.0%%
-title = Intercruises - Shoreside & Port Services
+match = -180.0%%
+title = Home - Intercruises - Shoreside & Port Services ™
 url = https://www.intercruises.com/
 
