--- a/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
+++ b/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda-skysilk.html
 lastopen = 2024-06-10 01:22:44
 
 [search]
-lastsearch = 2024-07-31 17:12:36
+lastsearch = 2024-07-31 23:40:43
 
 [demxanh.com]
-match = 28.0%%
-title = Chăn ga gối Singapore lụa
-url = https://demxanh.com/chan-ga-goi-singapore-lua.html
+match = 27.6%%
+title = Bộ chăn ga gối Hanvico LIVING - LV56
+url = https://demxanh.com/bo-chan-ga-goi-hanvico-living-lv56.html?srsltid=AfmBOorJVrUe-pvVGsrUsd7PxH9eMmuu6H2PSwqUTjGdqBMiXSwdvC_9
 
 [www.khodemthanhdo.com]
 match = 52.4%%
@@ -44,7 +44,7 @@ url = https://dem4mua.vn/san-pham/bo-ga-lua-phu-skysilk-pyeoda/
 [www.diepxuan.com]
 match = 62.1%%
 title = Bộ chăn ga gấm Pyeoda - Điệp Xuân
-url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda.html
+url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda.html?srsltid=AfmBOopK4HibR3Zft_C9vHq8vvSI02baWCYOImN9BfKugCUdjvMuwLm1
 
 [www.facebook.com]
 match = 28.0%%
