--- a/images/bo-ga-goi-chun-chan-happy-16/config.ini
+++ b/images/bo-ga-goi-chun-chan-happy-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-chan-happy-16.html
 lastopen = 2024-06-06 16:51:08
 
 [search]
-lastsearch = 2024-07-31 23:31:39
+lastsearch = 2024-07-31 23:50:48
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -18,8 +18,8 @@ url = https://www.facebook.com/Changaxuattaikho/
 
 [shopee.vn]
 match = -21.4%%
-title = Bộ ga gối trải giường 2m2x2m bo chun miễn phí, bộ ...
-url = https://shopee.vn/Bộ-ga-gối-trải-giường-2m2x2m-bo-chun-miễn-phí-bộ-ga-giường-cotton-poly-mềm-mịn-thấm-hút-mồ-hôi-Happy-Home-i.600110082.20851466621
+title = bộ ga chun poly giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=bộ ga chun poly
 
 [chandem.com.vn]
 match = 17.9%%
