--- a/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
+++ b/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-phu-mau-xoa-tin-18.html
 lastopen = 2024-06-09 23:46:35
 
 [search]
-lastsearch = 2024-07-31 23:26:10
+lastsearch = 2024-07-31 23:47:58
 
 [www.diepxuan.com]
 match = 3.6%%
@@ -22,14 +22,14 @@ title = ❤️Bộ chăn ga gối❤️ cotton poly mẫu Thỏ Hồng Hello ...
 url = https://shopee.vn/❤️Bộ-chăn-ga-gối❤️-cotton-poly-mẫu-Thỏ-Hồng-Hello-miễn-phí-bo-chun-drap-giường-ga-trải-giường-i.390896882.19894790651
 
 [foreverbedding.net]
-match = -7.1%%
-title = Top 10+ Bộ Chăn Ga Gối Đệm Màu Đỏ Hot Nhất Hiện Nay
-url = https://foreverbedding.net/mau-chan-ga-goi-dem-mau-do
+match = -32.1%%
+title = Top 20+ Bộ Chăn Ga Gối Đệm Cotton Đáng Mua Nhất Hiện Nay
+url = https://foreverbedding.net/mau-chan-ga-goi-dem-cotton
 
 [changagoidemsonghong.com]
-match = -28.6%%
-title = Bộ chăn ga gối Elegance mã E18-10 chính hãng Sông Hồng
-url = https://changagoidemsonghong.com/chan-ga-goi-elegance-ma-e18-10
+match = 17.9%%
+title = Chăn ga gối Home mã H17-048 Sale 30%%
+url = https://changagoidemsonghong.com/chan-ga-goi-home-h17-048
 
 [flexhouse.vn]
 match = -17.9%%
@@ -37,9 +37,9 @@ title = Bộ chăn ra gối cotton phối bèo nhiều màu sắc MM1175
 url = https://flexhouse.vn/bo-chan-ra-goi-cotton-phoi-beo-nhieu-mau-sac-mm1175
 
 [jysk.vn]
-match = -21.4%%
-title = Ruột Chăn, Ruột Gối Ngủ Cao Cấp, Giá Rẻ - JYSK.vn
-url = https://jysk.vn/ruot-chan-goi
+match = -10.7%%
+title = Chăn Ga Gối Nệm Đẹp, Cao Cấp, Giá Rẻ - JYSK.vn
+url = https://jysk.vn/bo-vo-chan-goi-ga
 
 [songhong.info]
 match = 14.3%%
