--- a/images/chieu-lac-d2-12/config.ini
+++ b/images/chieu-lac-d2-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-12.html
 lastopen = 2024-06-21 05:09:22
 
 [search]
-lastsearch = 2024-07-31 22:34:17
+lastsearch = 2024-07-31 23:43:12
 
 [agasound.vn]
 match = 6.7%%
@@ -54,12 +54,12 @@ url = https://www.lineabon.vn/product-page/lineabon-d3k2
 [www.diepxuan.com]
 match = 33.3%%
 title = Điệp Xuân Chiếu lác D2 12
-url = https://www.diepxuan.com/chieu-lac-d2-12.html?srsltid=AfmBOopVjugPzq43rG_c7YCHgSCKLElN0kK39-3Ixbyey3DW-OBh3Qgg
+url = https://www.diepxuan.com/chieu-lac-d2-12.html
 
 [shopee.vn]
-match = -146.7%%
-title = bút kèn D212 bút đầu quay dễ thương viết gel
-url = https://shopee.vn/D53-bút-donut-tai-mèo-lúc-lắc-bút-dễ-thương-viết-gel-i.52220670.1799275465
+match = -186.7%%
+title = Trống cajon AB-D2 có tay chỉnh kèm bao dù chống nước
+url = https://shopee.vn/Trống-cajon-AB-D2-có-tay-chỉnh-kèm-bao-dù-chống-nước-Mặt-màu-gỗ-Bảo-hành-1-năm-i.37429989.7833832785
 
 [mngiaquat.longbien.edu.vn]
 match = -213.3%%
