--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-31 16:21:11
+lastsearch = 2024-07-31 23:43:53
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -67,9 +67,9 @@ title = Giữ nghề dệt chiếu Long Cang
 url = https://baolongan.vn/giu-nghe-det-chieu-long-cang-a169502.html
 
 [www.youtube.com]
-match = -106.2%%
-title = Tuyệt chiêu chống rụng quả cho cây cam | VTC16
-url = https://www.youtube.com/watch?v=D5B7MtNy_kM
+match = -212.5%%
+title = 2 Ngày 1 Đêm Mùa 3 -Tập 1 | Lạc Long Quân và Âu Cơ phiên ...
+url = https://www.youtube.com/watch?v=7Czd1WUMPxU
 
 [books.google.com]
 match = -218.8%%
@@ -680,4 +680,9 @@ url = https://www.yellowpages.com.vn/tagclass/40149110/vietnam-granite-stone-sup
 match = -66.7%%
 title = promotion
 url = https://shinhan.com.vn/public/uploads/card/DEBIT_2024/SHINHAN ZONE/AN KHANG - EN.pdf
+
+[vtv.vn]
+match = -193.8%%
+title = Tiền Giang: Bổ sung hệ thống chiếu sáng cho toàn tuyến ...
+url = https://vtv.vn/xa-hoi/tien-giang-bo-sung-he-thong-chieu-sang-cho-toan-tuyen-quoc-lo-1-20240731185832171.htm
 
