--- a/images/man-re-trang-16/config.ini
+++ b/images/man-re-trang-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-16.html
 lastopen = 2024-06-09 23:51:34
 
 [search]
-lastsearch = 2024-07-31 22:22:53
+lastsearch = 2024-07-31 23:46:35
 
 [www.gov.uk]
 match = -200.0%%
@@ -184,7 +184,7 @@ url = https://www.premierleague.com/
 [books.google.com]
 match = -260.0%%
 title = Department of the Army Pamphlet - Page 153 - Google Books Result
-url = https://books.google.com/books?id=wBXAEQTV0TAC&pg=PA153&lpg=PA153&dq=man+re+trang+16&source=bl&ots=luPmASBVOe&sig=ACfU3U0CzEZ0hrnl5FosSVwv20E8sBdL-A&hl=en&sa=X&ved=2ahUKEwiRrfC3sMSHAxVgF1kFHWmzAf4Q6AF6BAgiEAM
+url = https://books.google.com/books?id=wBXAEQTV0TAC&pg=PA153&lpg=PA153&dq=man+re+trang+16&source=bl&ots=luPnvOASSk&sig=ACfU3U0Tos-6pfkk-tSLw4o1sPvbr069SQ&hl=en&sa=X&ved=2ahUKEwjXxPSy3dGHAxULMlkFHRKnLBkQ6AF6BAgjEAM
 
 [www.nolo.com]
 match = 0.0%%
