--- a/images/nem-everon-150x190x9/config.ini
+++ b/images/nem-everon-150x190x9/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-150x190x9.html
 lastopen = 2024-06-06 17:10:22
 
 [search]
-lastsearch = 2024-07-31 17:16:06
+lastsearch = 2024-07-31 23:50:06
 
 [everonvn.com.vn]
 match = 15.0%%
@@ -49,7 +49,7 @@ url = https://thegioidemviet.vn/nem-cao-su-bong-kim-cuong/
 [demxanh.com]
 match = -135.0%%
 title = [Cập nhật] Bảng giá đệm bông ép Elan khuyến mại năm ...
-url = https://demxanh.com/bang-gia-dem-bong-ep-elan-2021.html
+url = https://demxanh.com/bang-gia-dem-bong-ep-elan-2021.html?srsltid=AfmBOorOw99ST1Lvrgt-Vx-iNy6B0wlf_qmp23voJKc2G_sWVUofmmd8
 
 [thegioidemonline.com]
 match = -40.0%%
@@ -85,4 +85,9 @@ url = https://bayoubullets.net/9mm-150-gr-swc-3000-ct-case/
 match = -60.0%%
 title = Amazon.com: Customer Questions & Answers
 url = https://www.amazon.com/ask/questions/asin/B000CGV7T0
+
+[www.facebook.com]
+match = -5.0%%
+title = Chăn ga gối đệm everon Đông Anh
+url = https://www.facebook.com/p/Chăn-ga-gối-đệm-everon-Đông-Anh-100054215798345/?locale=hu_HU
 
