--- a/images/tam-trai-ks-uc-260-300/config.ini
+++ b/images/tam-trai-ks-uc-260-300/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks-uc-260-300.html
 lastopen = 2024-06-07 00:15:36
 
 [search]
-lastsearch = 2024-07-31 17:44:36
+lastsearch = 2024-07-31 23:34:51
 
 [www.cms.gov]
 match = 4.5%%
@@ -127,9 +127,9 @@ title = MEET ALISON MASS
 url = https://www.stern.nyu.edu/sites/default/files/assets/documents/STERNbusiness-Sp16-Meet-Alison-Mass.pdf
 
 [www.ncbi.nlm.nih.gov]
-match = 9.1%%
-title = Bacterial Terpenome - PMC
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8107197/
+match = -118.2%%
+title = Wnt Signaling in Brain Tumors: A Challenging Therapeutic ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC10215617/
 
 [westsideobserver.com]
 match = -58.3%%
@@ -177,8 +177,8 @@ title = Farm houses for sale in new hampshire [mJROCi]
 url = https://www.nitrc.org/links/?group_id=51&url=https://4835712.detsad147vrn.ru/5487923u6fe43a
 
 [explore.omsystem.com]
-match = 13.6%%
-title = TG-7 - OM SYSTEM Cameras
+match = -12.5%%
+title = TG-7 - OM System
 url = https://explore.omsystem.com/us/en/tg-7
 
 [www.sohoonline.org]
