--- a/images/chieu-lac-90x100/config.ini
+++ b/images/chieu-lac-90x100/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-90x100.html
 lastopen = 2024-06-20 22:28:06
 
 [search]
-lastsearch = 2024-07-31 17:32:05
+lastsearch = 2024-08-01 00:15:07
 
 [anlacphat.com]
 match = -118.8%%
@@ -49,7 +49,7 @@ url = https://qtetech.com/hop-chong-tinh-dien
 [www.lazada.vn]
 match = -137.5%%
 title = Chiếu Lác May Giá Tốt T07/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/chieu-lac-may/?srsltid=AfmBOoqC6JjSOeS8MER2P5C0KHGD9dpsFDuC_rLIroMNeb9Ic4JwYNW4
+url = https://www.lazada.vn/tag/chieu-lac-may/
 
 [vi.made-in-china.com]
 match = -100.0%%
@@ -59,7 +59,7 @@ url = https://vi.made-in-china.com/co_ti-care/product_Medical-100-Cotton-Pillow-
 [www.diepxuan.com]
 match = -68.8%%
 title = Chiếu gấp Thái Bình 180x300 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-thai-binh-180x300.html?srsltid=AfmBOop_9m1uyxfu8rDtNTJWcVVoH1g56EnG50MS7XDpYwQPDRIUfDM0
+url = https://www.diepxuan.com/chieu-gap-thai-binh-180x300.html
 
 [www.thietbihiepphat.com]
 match = -43.8%%
@@ -82,9 +82,9 @@ title = THÉP HỘP VUÔNG 90X90 dày 2ly, 2.5ly, 3ly, 3.5ly, 4ly, 5ly, 6ly
 url = https://thepxuyena.com.vn/San-pham/THEP-HOP-VUONG-90X90-day-2ly-2-5ly-3ly-3-5ly-4ly-5ly-6ly-ad1116.html
 
 [shopee.vn]
-match = -187.5%%
-title = Khăn Tắm Đa Năng PUKID, 6 Lớp Cotton Tre Cao Cấp ...
-url = https://shopee.vn/Khăn-Tắm-Đa-Năng-PUKID-6-Lớp-Cotton-Tre-Cao-Cấp-Size-90x100-i.43046458.19659739473
+match = -156.2%%
+title = Vam Cảo Chữ H Tháo Mở Bạc Đạn Puly 90x100 130x100 ...
+url = https://shopee.vn/Vam-Cảo-Chữ-H-Tháo-Mở-Bạc-Đạn-Puly-90x100-130x100-160x150-i.29908710.7236019449
 
 [hunglien.net]
 match = 31.2%%
