--- a/images/man-tu-bung-dinh-vuong18/config.ini
+++ b/images/man-tu-bung-dinh-vuong18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong18.html
 lastopen = 2024-06-07 00:52:24
 
 [search]
-lastsearch = 2024-07-31 23:27:13
+lastsearch = 2024-08-01 00:13:59
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,9 +17,9 @@ title = Mùng Tự Bung Đỉnh Vuông 1m8 x 2m Viền Chân
 url = https://www.mungbaobao.com/mung-tu-bung-dinh-vuong-1m8-x-2m-bao-bao.html
 
 [shopee.vn]
-match = -29.2%%
-title = màn gấp vuông giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=màn gấp vuông
+match = -54.2%%
+title = Màn chụp vuông - Giá Tốt, Sale Tháng 07, Ship 0 Đồng
+url = https://shopee.vn/list/màn chụp/vuông
 
 [easydream.vn]
 match = -4.2%%
@@ -137,9 +137,9 @@ title = MÀN (MÙNG) CHỤP TỰ BUNG ĐỈNH VUÔNG THU TRANG
 url = https://manthutrang.com/products/man-chup-tu-bung-vien-chan-ren-cao-cap-man-thu-trang
 
 [zingtruyen.top]
-match = 16.7%%
-title = Đọc truyện - Dai Ma Vuong 18 19 20
-url = https://zingtruyen.top/chapter/dai-ma-vuong-18-19-20/2974203/dai-ma-vuong-18-19-20/804787.html
+match = -25.0%%
+title = Đọc truyện Long vương 18+ [full] - Chương 14
+url = https://zingtruyen.top/chapter/long-vuong-18-full/6447373/chuong-14/19463119.html
 
 [www.instagram.com]
 match = 4.2%%
