--- a/images/nem-pyeoda-thuong-18/config.ini
+++ b/images/nem-pyeoda-thuong-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-pyeoda-thuong-18.html
 lastopen = 2024-06-18 17:45:17
 
 [search]
-lastsearch = 2024-07-31 23:38:21
+lastsearch = 2024-08-01 00:19:41
 
 [www.facebook.com]
 match = -45.0%%
@@ -64,7 +64,7 @@ url = https://demsingapore.com/bo-chan-ga-goi-singapore-5-goi-gold-pyeoda-24.htm
 [vuanem.com]
 match = -15.0%%
 title = Chăn Ga Pyeoda Cao Cấp, Chính Hãng
-url = https://vuanem.com/brand/pyeoda?srsltid=AfmBOoqmTFGxT7GDqWY4PcKsIUbfVZUfC--gdhtILK-jD29Wg3ZuBkgn
+url = https://vuanem.com/brand/pyeoda
 
 [changagoidemphuongbac.com]
 match = -15.0%%
