--- a/images/tam-trai-ks/config.ini
+++ b/images/tam-trai-ks/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks.html
 lastopen = 2024-06-07 00:26:12
 
 [search]
-lastsearch = 2024-07-31 23:49:45
+lastsearch = 2024-08-01 00:29:29
 
 [www.linkedin.com]
 match = -145.5%%
@@ -244,7 +244,7 @@ url = http://ruina.tam.cornell.edu/research/topics/bicycle_mechanics/stablebicyc
 [kingsofa.vn]
 match = -236.4%%
 title = Thảm Trải Sàn Lông Ngắn KS-LN-TS0003 - King Sofa
-url = https://kingsofa.vn/tham-trai-san-long-ngan-ks-ln-ts0003/?srsltid=AfmBOoockXmgY4GB6w1Lh3Fi6Yfq29q3cfTWhutJZCcRrQsZMD7ehe0Z
+url = https://kingsofa.vn/tham-trai-san-long-ngan-ks-ln-ts0003/
 
 [www.cgca.gov.in]
 match = -90.9%%
