CI images update

--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-07-31 22:46:36
+lastsearch = 2024-08-01 00:38:33
 
 [en.wikipedia.org]
 match = -45.5%%
@@ -32,9 +32,9 @@ title = Malaysian Society of Gastroenterology and Hepatology ...
 url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9303255/
 
 [books.google.com]
-match = -200.0%%
-title = Reactive Oxygen Species in Chemistry, Biology, and Medicine
-url = https://books.google.com/books?id=p5LkBwAAQBAJ&pg=PA123&lpg=PA123&dq=chan+5+kg+kq+song&source=bl&ots=XG0u7tZ6Kk&sig=ACfU3U0qIDTMTpa28UlclM7Lu8-Ycj_upg&hl=en&sa=X&ved=2ahUKEwjZwNX-z9GHAxXhDzQIHefDFS8Q6AF6BAglEAM
+match = -11.8%%
+title = Cumulated Index Medicus
+url = https://books.google.com/books?id=KlBiDKi_dngC&pg=PA5960&lpg=PA5960&dq=chan+5+kg+kq+song&source=bl&ots=BOWWHL1r_c&sig=ACfU3U0bavZnvg5fk-VAhsTM8YD9_1gxLQ&hl=en&sa=X&ved=2ahUKEwjK0MOB6dGHAxXUFzQIHTy0FP0Q6AF6BAg0EAM
 
 [www.ateezstoryline.com]
 match = 0.0%%
