--- a/images/chieu-dieu-hoa-khong-goi-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-16/config.ini
@@ -7,9 +7,9 @@ lastopen = 2024-06-09 22:26:33
 lastsearch = 2024-08-01 00:15:29
 
 [demxanh.com]
-match = 3.7%%
-title = Chiếu điều hòa Nhật Bản Nekio Viscose màu xanh
-url = https://demxanh.com/chieu-dieu-hoa-nhat-ban-nekio-viscose-mau-xanh.html
+match = 18.5%%
+title = Chiếu điều hòa cao su non vỏ bọc vải Tencel
+url = https://demxanh.com/chieu-dieu-hoa-cao-su-non.html?srsltid=AfmBOopGlcRFjpl41JVlor3f5pSqujh40HvEIy6HV-fOo-ERifLJDY27
 
 [shopee.vn]
 match = 18.5%%
@@ -48,8 +48,8 @@ url = https://lybalansieucute.com/chieu-dieu-hoa-noi-dia-nanjiren-11-18
 
 [demviethome.vn]
 match = 14.8%%
-title = Chiếu điều hòa Latex C16 giá rẻ hà nội. ...
-url = https://demviethome.vn/chieu-dieu-hoa-latex-c16/
+title = Chiếu điều hòa latex C08 giá rẻ hà nội. ...
+url = https://demviethome.vn/chieu-dieu-hoa-latex-c08/?srsltid=AfmBOooMln6wqyhQtzP6xNG4HCKFdiJVRcGdm83-kv1KnLVoRtrUy55I
 
 [hc.com.vn]
 match = -22.2%%
@@ -147,9 +147,9 @@ title = Chiếu điều hòa kèm gối | Chăn, chiếu, màn, ga
 url = https://ababy.com.vn/chieu-dieu-hoa-kem-goi-p1289.html
 
 [www.youtube.com]
-match = -55.6%%
-title = Thực hư về khả năng làm mát của chiếu điều hòa | An toàn ...
-url = https://www.youtube.com/watch?v=ccaTWASdw7I
+match = -44.4%%
+title = HÀNG GIẢM GIÁ - Chiếu điều hòa nhật 2 mặt - nằm êm ngủ ...
+url = https://www.youtube.com/watch?v=fhwNXjU32Ww
 
 [dienmaycholon.com]
 match = -29.6%%
