--- a/images/chan-long-muji/config.ini
+++ b/images/chan-long-muji/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-long-muji.html
 lastopen = 2024-07-01 21:12:38
 
 [search]
-lastsearch = 2024-07-31 23:48:37
+lastsearch = 2024-08-01 00:40:39
 
 [www.muji.com]
-match = -33.3%%
-title = RUỘT CHĂN
-url = https://www.muji.com/vn/products/section/E30001
+match = 7.1%%
+title = chăn lông nhung xám mỏng
+url = https://www.muji.com/vn/vi/shop/000101/articles/recommend/1221
 
 [thegioidemviet.vn]
 match = -192.9%%
@@ -47,9 +47,9 @@ title = Chăn lông cừu Muji thương hiệu số 1 Nhật Bản - Coda
 url = https://coda.io/@hoang-quang-tuyen/chan-long-cuu-muji-thuong-hieu-so-1-nhat-ban
 
 [shopee.vn]
-match = 28.6%%
-title = Chăn Lông Nhung Xám MUJI
-url = https://shopee.vn/Chăn-Lông-Nhung-Xám-MUJI-i.601622525.12174454922
+match = -135.7%%
+title = CHĂN LÔNG TUYẾT MUJI XUẤT NHẬT SIÊU MỀM MỊN ...
+url = https://shopee.vn/CHĂN-LÔNG-TUYẾT-MUJI-XUẤT-NHẬT-SIÊU-MỀM-MỊN-KÍCH-THƯỚC-2M*2M3-i.207051295.4759765140
 
 [changagoidemdep.vn]
 match = 35.7%%
