CI images update

--- a/images/bo-bon-mua-chun-chan-182m/config.ini
+++ b/images/bo-bon-mua-chun-chan-182m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-182m.html
 lastopen = 2024-06-07 00:25:46
 
 [search]
-lastsearch = 2024-07-31 21:45:58
+lastsearch = 2024-08-01 00:46:08
 
 [everon.online]
 match = 12.0%%
@@ -42,9 +42,9 @@ title = {search_title}
 url = {search_url}
 
 [tuoitre.vn]
-match = 4.0%%
-title = Ấn Độ xây tượng cao nhất thế giới
-url = https://tuoitre.vn/an-do-xay-tuong-cao-nhat-the-gioi-577749.htm
+match = -24.0%%
+title = Kiến nghị mở rộng, nâng cấp sân bay Cà Mau
+url = https://tuoitre.vn/kien-nghi-mo-rong-nang-cap-san-bay-ca-mau-20240729110833771.htm
 
 [batdongsan.com.vn]
 match = -64.0%%
@@ -109,7 +109,7 @@ url = https://www.dulichhoanmy.com/new/tour-du-lich-han-quoc-30-4/
 [monre.gov.vn]
 match = 0.0%%
 title = ThongBao - All Items
-url = https://monre.gov.vn/Portal/Lists/ThongBao/AllItems.aspx?Paged=TRUE&PagedPrev=TRUE&p_ID=394&PageFirstRow=2341&&View={1182C8FF-C7D3-4EC0-8021-828AED57B78B}
+url = https://monre.gov.vn/Portal/Lists/ThongBao/AllItems.aspx?Paged=TRUE&PagedPrev=TRUE&p_ID=394&PageFirstRow=2071&&View={1182C8FF-C7D3-4EC0-8021-828AED57B78B}
 
 [www.diepxuan.com]
 match = 96.0%%
@@ -153,8 +153,8 @@ url = https://vietbao.vn/me-gia-u70-cong-con-trai-cao-1-82m-suot-5-nam-co-tap-ch
 
 [m.facebook.com]
 match = -56.0%%
-title = HÀ NỘI | Bán nhà Thanh Xuân, nhà đẹp, ở ngay, 52m, 8 tỷ
-url = https://m.facebook.com/groups/muabannhadathanoi247/posts/7982408988520156/
+title = Hiểu Biết Hơn Mỗi Ngày | Capyboss Sơn Tùng MT-P😍 ...
+url = https://m.facebook.com/groups/178976120262143/posts/901968037962944/
 
 [dantri.com.vn]
 match = -60.0%%
@@ -365,4 +365,9 @@ url = https://ducanhland.com/du-an/chung-cu-grand-sunlake-van-quan/
 match = -76.0%%
 title = Khám phá vẻ đẹp bất tận của sông Trường Giang ở Trung ...
 url = https://vi.alongwalker.co/kham-pha-ve-dep-bat-tan-cua-song-truong-giang-o-trung-quoc-s225004.html
+
+[plo.vn]
+match = -84.0%%
+title = Loạt câu hỏi an ninh bảo vệ yếu nhân từ vụ ông Trump bị ...
+url = https://plo.vn/loat-cau-hoi-an-ninh-bao-ve-yeu-nhan-tu-vu-ong-trump-bi-ban-post800436.html
 
