--- a/images/man-re-trang-10/config.ini
+++ b/images/man-re-trang-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-10.html
 lastopen = 2024-06-07 00:52:54
 
 [search]
-lastsearch = 2024-08-01 00:19:20
+lastsearch = 2024-08-01 00:47:34
 
 [burningman.org]
 match = 0.0%%
@@ -267,8 +267,8 @@ title = World's largest free Single Muslim marriage and Muslim ...
 url = https://muzz.com/en-US/
 
 [www.zara.com]
-match = -26.7%%
-title = ZARA United States | SALE
+match = -133.3%%
+title = ZARA United States | New Collection Online
 url = https://www.zara.com/us/
 
 [www.reuters.com]
