--- a/images/bo-bon-mua-epm21069-180x200/config.ini
+++ b/images/bo-bon-mua-epm21069-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-epm21069-180x200.html
 lastopen = 2024-06-07 00:16:06
 
 [search]
-lastsearch = 2024-07-31 23:17:36
+lastsearch = 2024-08-01 00:54:28
 
 [everon.online]
 match = -7.4%%
@@ -28,23 +28,23 @@ url = https://demxanh.com/bo-chan-ga-goi-everon-epm-21069.html
 
 [everonhanquoc.vn]
 match = 18.5%%
-title = Bộ chăn ga gối Everon EPC-21053
-url = https://everonhanquoc.vn/everon/12776/bo-chan-ga-goi-everon-epc-21053
+title = Bộ Chăn ga gối Everon EPM-21067
+url = https://everonhanquoc.vn/everon/12770/bo-chan-ga-goi-everon-epm-21067
 
 [everonhn.com.vn]
-match = 33.3%%
-title = Bộ chăn ga Everon ESB -22020
-url = https://everonhn.com.vn/bo-chan-ga-everon-esc-22020
+match = 25.9%%
+title = Bộ chăn ga everon EPT -21045
+url = https://everonhn.com.vn/bo-chan-ga-everon-ept-21045
 
 [everon.net.vn]
-match = -18.5%%
-title = Bộ Everon Epm-21069 - Chăn ga gối đệm Everon
+match = 15.8%%
+title = Bộ Everon Epm-21069
 url = https://everon.net.vn/everon/2132/bo-everon-epm-21069
 
 [sieuthidemhanquoc.com.vn]
 match = 18.5%%
-title = Bộ chăn ga gối Everon ESM-21016
-url = https://sieuthidemhanquoc.com.vn/bo-chan-ga-goi-everon-esm-21016-1518
+title = Bộ chăn ga gối Everon ESM-21012
+url = https://sieuthidemhanquoc.com.vn/bo-chan-ga-goi-everon-esm-21012-1526
 
 [shopee.vn]
 match = -44.4%%
