--- a/images/chan-hoi-coco/config.ini
+++ b/images/chan-hoi-coco/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-coco.html
 lastopen = 2024-06-09 23:18:33
 
 [search]
-lastsearch = 2024-08-01 00:32:11
+lastsearch = 2024-08-01 01:00:49
 
 [hk.linkedin.com]
-match = 0.0%%
-title = Coco Chan - Hoi Lai Kok
-url = https://hk.linkedin.com/in/coco-chan-935486254
+match = -123.1%%
+title = Chan cocoo - Freelance (Self employed)
+url = https://hk.linkedin.com/in/chan-cocoo-2aa4362b1
 
 [www.instagram.com]
 match = -230.8%%
@@ -22,9 +22,9 @@ title = Once Upon
 url = https://www.solunafineart.com/once-upon
 
 [en.wikipedia.org]
-match = 7.7%%
-title = Cantonese people
-url = https://en.wikipedia.org/wiki/Cantonese_people
+match = -25.0%%
+title = Coco Lee
+url = https://en.wikipedia.org/wiki/Coco_Lee
 
 [www.sassymamahk.com]
 match = -246.2%%
