--- a/images/chieu-cay-ht-15/config.ini
+++ b/images/chieu-cay-ht-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-ht-15.html
 lastopen = 2024-06-09 23:44:26
 
 [search]
-lastsearch = 2024-07-31 20:04:09
+lastsearch = 2024-08-01 00:55:31
 
 [www.diepxuan.com]
 match = -20.0%%
 title = Chiếu cây HT 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-ht-160x200.html
+url = https://www.diepxuan.com/chieu-cay-ht-160x200.html?srsltid=AfmBOopVpm5ebe4WwjmOFGYn0J8IpXE7Wj2Uu5PHeOkd93Ie5lepX2LC
 
 [www.htlight.vn]
 match = -26.7%%
@@ -52,9 +52,9 @@ title = Lịch phát sóng - Đài Truyền hình TP. ...
 url = https://www.htv.com.vn/lich-phat-song
 
 [www.youtube.com]
-match = -193.3%%
-title = NƯỚC MẮT THẬT SỰ RƠI KHI PHẢI NÓI LỜI CHIA TAY EM ...
-url = https://www.youtube.com/watch?v=h2Ch-DoKNBk
+match = -246.7%%
+title = Tình Đất - Thanh Tùng ( St: Tuấn Phương ) Đất bạc màu và ...
+url = https://www.youtube.com/watch?v=rzjYGTOnEHg
 
 [htlight.vn]
 match = -26.7%%
