--- a/images/chieu-truc-cong-ty-12-19/config.ini
+++ b/images/chieu-truc-cong-ty-12-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-12-19.html
 lastopen = 2024-06-09 23:41:54
 
 [search]
-lastsearch = 2024-07-31 17:13:59
+lastsearch = 2024-08-01 00:53:29
 
 [chieutrucsaigon.com]
 match = 16.7%%
@@ -14,12 +14,12 @@ url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/chieu-truc-san-pham-doc-da
 [demxanh.com]
 match = -8.3%%
 title = Bảng giá chiếu trúc Hương Trúc mới nhất 2024
-url = https://demxanh.com/bang-gia-chieu-truc-huong-truc-moi-nhat-2019.html?srsltid=AfmBOopuA2vwoGdyKResri1pn07UanSgTVMF9m4NVDbZbaDwk_Z_EKz2
+url = https://demxanh.com/bang-gia-chieu-truc-huong-truc-moi-nhat-2019.html?srsltid=AfmBOopfXOH3-Me8TYT5LPvTQnwdMjpYVf8ukFeaqRlW3hvh7UnOdJ7A
 
 [chieutrelanlan.com]
-match = -70.8%%
-title = Giá chiếu trúc 8 tấc, 1m, 1m2, 1m6, 1m8 có trên thị trường
-url = https://chieutrelanlan.com/chieu-truc-voi-day-du-cac-size-cho-nguoi-doc-than-cho-ca-dai-gia-dinh-k16.html
+match = -66.7%%
+title = Chiếu trúc 0.8m hạt nhỏ loại không viền màu trắng chất ...
+url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-khong-vien-mau-trang-80x190cm-19.html
 
 [trangvangvietnam.com]
 match = -37.5%%
@@ -59,7 +59,7 @@ url = https://chieutrucxinh.weebly.com/chia-se/previous/2
 [www.lazada.vn]
 match = 20.8%%
 title = [HCM]Chiếu trúc 0,8m x 19m đến 2m
-url = https://www.lazada.vn/products/hcmchieu-truc-08m-x-19m-den-2m-i405120490.html?srsltid=AfmBOorjSd2EMEWH0QJrmJHLnYIFJiIvSS0GFKZ-V6Hc60um6CxiiWsB
+url = https://www.lazada.vn/products/hcmchieu-truc-08m-x-19m-den-2m-i405120490.html?srsltid=AfmBOorm5GF9BX-HvG0-wHNWY7zmemWq1eS1WGxYlJJjmhA4yIm-qR8z
 
 [thptthuthiem.hcm.edu.vn]
 match = -83.3%%
