--- a/images/ga-phu-uc-16/config.ini
+++ b/images/ga-phu-uc-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-phu-uc-16.html
 lastopen = 2024-06-07 01:01:59
 
 [search]
-lastsearch = 2024-07-31 20:45:27
+lastsearch = 2024-08-01 00:56:14
 
 [us.misumi-ec.com]
 match = -325.0%%
 title = GA16-16-6 | Enclosures - ABS Box, Water/Dust Proof, GA ...
-url = https://us.misumi-ec.com/vona2/detail/222000229166/?HissuCode=GA16-16-6
+url = https://us.misumi-ec.com/vona2/detail/222000229166/?HissuCode=GA16-16-6&srsltid=AfmBOooOWJE-FiBAhSUS55-RZWWciyfcBk8365HAdJgRErxfFi7xNltK
 
 [www.amazon.com]
 match = -183.3%%
@@ -27,9 +27,9 @@ title = Phu Ha - Lawrenceville, Georgia, United States
 url = https://www.linkedin.com/in/phu-ha-b87850148
 
 [www.gwhospital.com]
-match = -275.0%%
-title = Welcome to GW University Hospital | Washington, DC
-url = https://www.gwhospital.com/
+match = 0.0%%
+title = 
+url = https://www.gwhospital.com/about
 
 [finance.saccounty.gov]
 match = -150.0%%
@@ -72,9 +72,9 @@ title = The Atlanta constitution. (Atlanta, Ga.) 1885-19??, September 16 ...
 url = https://gahistoricnewspapers.galileo.usg.edu/lccn/sn89053706/1895-09-16/ed-1/seq-10/
 
 [en.wikipedia.org]
-match = -125.0%%
-title = List of Sigma Phi Epsilon chapters
-url = https://en.wikipedia.org/wiki/List_of_Sigma_Phi_Epsilon_chapters
+match = 12.5%%
+title = SM UC-16
+url = https://en.wikipedia.org/wiki/SM_UC-16
 
 [uci.edu]
 match = -8.3%%
