--- a/images/man-tu-bung-18/config.ini
+++ b/images/man-tu-bung-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-18.html
 lastopen = 2024-06-10 00:37:41
 
 [search]
-lastsearch = 2024-08-01 00:33:37
+lastsearch = 2024-08-01 00:44:41
 
 [shopee.vn]
 match = -171.4%%
@@ -43,8 +43,8 @@ url = https://www.mungbaobao.com/
 
 [www.bible.com]
 match = -142.9%%
-title = THUPUAN 18 | MIZOVBSI Bible | YouVersion
-url = https://www.bible.com/bible/253/REV.18.MIZOVBSI
+title = MATHAIA 18 | MIZCLBSI Bible | YouVersion
+url = https://www.bible.com/bible/1048/MAT.18.MIZCLBSI
 
 [mungchup.com]
 match = -164.3%%
@@ -107,9 +107,9 @@ title = Màn Mùng chụp tự bung Kiều Phi - Bảo Hành 18 tháng
 url = https://www.facebook.com/groups/manchuptubung/
 
 [www.churchofjesuschrist.org]
-match = -271.4%%
-title = 1 Nifai 7 - The Church of Jesus Christ of Latter-day Saints
-url = https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/7?lang=tpi
+match = -35.7%%
+title = Doktrin na ol Kavanen 89
+url = https://www.churchofjesuschrist.org/study/scriptures/dc-testament/dc/89?lang=tpi
 
 [sieuthinguyenkim.com]
 match = -128.6%%
@@ -127,9 +127,9 @@ title = The Ultimate Guide To New Zealand Slang
 url = https://brenontheroad.com/travellers-guide-new-zealand-slang/
 
 [www.nothingbundtcakes.com]
-match = 0.0%%
-title = 
-url = https://www.nothingbundtcakes.com/find-a-bakery/
+match = -135.7%%
+title = Nothing Bundt Cakes: Delicious Bundt Cakes
+url = https://www.nothingbundtcakes.com/
 
 [www.tiktok.com]
 match = -278.6%%
@@ -140,4 +140,9 @@ url = https://www.tiktok.com/@eiraaziera6699/video/7397729143904931079
 match = -14.3%%
 title = Emperor Gaozu of Han
 url = https://en.wikipedia.org/wiki/Emperor_Gaozu_of_Han
+
+[bandcamp.com]
+match = -50.0%%
+title = Bandcamp
+url = https://bandcamp.com/
 
