--- a/images/nem-sieu-nhe-9f-18/config.ini
+++ b/images/nem-sieu-nhe-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-18.html
 lastopen = 2024-06-09 23:55:48
 
 [search]
-lastsearch = 2024-07-31 23:19:42
+lastsearch = 2024-08-01 00:51:27
 
 [m.youtube.com]
 match = -144.4%%
@@ -17,9 +17,9 @@ title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
 url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
 
 [www.instagram.com]
-match = -138.9%%
-title = Ăn-bởi-Long | [NEM NƯỚNG, CÁ BÒ, PHÔ MAI QUE CHỊ ...
-url = https://www.instagram.com/p/Bb9uTnaBRoV/?hl=en
+match = -116.7%%
+title = LU EATING | MỘT GÓC NEM CHUA RÁN XINH XẺO GIỮA ...
+url = https://www.instagram.com/p/CltHti5L66x/
 
 [www.facebook.com]
 match = -105.6%%
@@ -44,7 +44,7 @@ url = https://www.grab.com/vn/en/food-blog/trending-food/tphcm-bun-nem-nuong-sie
 [www.diepxuan.com]
 match = 11.1%%
 title = Điệp Xuân Nệm siêu nhẹ
-url = https://www.diepxuan.com/nem-sieu-nhe.html
+url = https://www.diepxuan.com/nem-sieu-nhe.html?srsltid=AfmBOop5RX7p9wfm625YoAEj04aAUDrGZ54Cqg4_Uvqx9_JFIvo5WmI7
 
 [shopcamping.vn]
 match = -144.4%%
@@ -72,9 +72,9 @@ title = U.S. DEPARTMENT OF COMMERCE National Technical ...
 url = https://www.ojp.gov/pdffiles1/Photocopy/93776NCJRS.pdf
 
 [m.facebook.com]
-match = -177.8%%
-title = Thấy thương chị gái bán nem nướng thật thà hỏi gì cũng khai
-url = https://m.facebook.com/amthucduongpho247/videos/thấy-thương-chị-gái-bán-nem-nướng-thật-thà-hỏi-gì-cũng-khai-atdp/629711951714693/
+match = -111.1%%
+title = Người Việt Bolsa/Orange County | NEM CHUA CHẢ HUẾ
+url = https://m.facebook.com/groups/nguoivietorangecounty/posts/nem-chua-chả-huế-2520-cái-chả-huế-mini-65-50-cái-sử-dụng-thịt-heo-tươi-chất-lượn/2894022880748076/
 
 [www.proz.com]
 match = -183.3%%
