--- a/images/ruot-goi-ke-warmdream-50x70/config.ini
+++ b/images/ruot-goi-ke-warmdream-50x70/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-warmdream-50x70.html
 lastopen = 2024-07-01 12:33:15
 
 [search]
-lastsearch = 2024-07-31 21:39:32
+lastsearch = 2024-08-01 00:56:57
 
 [shope.io.vn]
 match = -59.3%%
@@ -14,7 +14,7 @@ url = https://shope.io.vn/ruot-goi-dau-hoa-tiet-ke-vanda-bong-gon-cao-cap-mau-ho
 [www.diepxuan.com]
 match = 29.6%%
 title = Ruột gối kê WDR lông vũ - Điệp Xuân
-url = https://www.diepxuan.com/ruot-goi-ke-wdr-long-vu.html?srsltid=AfmBOoq116EcgPPaEJkpR2ZeqkF90_Ak-3EJ479BRlNhaZRol5GO96Uz
+url = https://www.diepxuan.com/ruot-goi-ke-wdr-long-vu.html
 
 [giasale.com]
 match = -59.3%%
