--- a/images/tui-nem-korea-tuan-anh-16/config.ini
+++ b/images/tui-nem-korea-tuan-anh-16/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-16.html
 lastopen = 2024-06-17 10:42:58
 
 [search]
-lastsearch = 2024-07-31 20:01:29
+lastsearch = 2024-08-01 00:47:55
 
 [tuananh.vn]
-match = -72.7%%
-title = Đệm bông ép
-url = https://tuananh.vn/dem-bong-ep-c51.html
+match = 22.2%%
+title = Đệm Korea Gấm Plus
+url = https://tuananh.vn/dem-korea-gam-plus-p223.html
 
 [demxanh.com]
 match = -28.0%%
 title = Đệm bông ép Tuấn Anh Korea gấm Plus chính hãng
-url = https://demxanh.com/dem-bong-ep-tuan-anh-korea-gam-plus.html?srsltid=AfmBOoqvWDB8nTgju8LQfYj-DhIPieoibnPkaj7-AYwb5yjq3CmJ_gUk
+url = https://demxanh.com/dem-bong-ep-tuan-anh-korea-gam-plus.html
 
 [shopee.vn]
 match = -40.0%%
@@ -74,7 +74,7 @@ url = https://www.facebook.com/photo.php?fbid=663632295792539&id=100064373242328
 [demviethome.vn]
 match = -40.0%%
 title = Đệm bông ép Tuấn Anh 2 Mảnh Korea giá rẻ hà nội. ...
-url = https://demviethome.vn/dem-bong-ep-tuan-anh-2-manh-korea/?srsltid=AfmBOooGgsBzdLHagFdoeqzO4VJH5rzLB0xq3pfbq1Womx6vEP0_1mhK
+url = https://demviethome.vn/dem-bong-ep-tuan-anh-2-manh-korea/
 
 [m.facebook.com]
 match = -76.0%%
