CI images update

--- a/images/bo-bon-mua-chun-chan-140x190/config.ini
+++ b/images/bo-bon-mua-chun-chan-140x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-140x190.html
 lastopen = 2024-06-06 16:45:05
 
 [search]
-lastsearch = 2024-08-01 00:32:54
+lastsearch = 2024-08-01 01:25:57
 
 [www.everonvn.vn]
 match = -50.0%%
@@ -17,14 +17,14 @@ title = Chăn bốn mùa Everon chính hãng - Giảm giá tốt nhất
 url = https://everon.online/collections/chan-bon-mua-everon
 
 [www.diepxuan.com]
-match = 3.6%%
-title = Chiếu nhựa Hà Nội 140x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-140x190.html?srsltid=AfmBOoqaK_wDNkZ9dyvTHnYqx1sTN_dNq5s_I7XOw1wJnQ-Q7Uw--ZF-
+match = 14.3%%
+title = Bộ chăn ga gấm Pyeoda - Điệp Xuân
+url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda.html
 
 [demxanh.com]
 match = -32.1%%
 title = Đệm bốn mùa Olympia Massage vải gấm xốp chính hãng
-url = https://demxanh.com/dem-bon-mua-olympia-massage-vai-gam-xop.html?srsltid=AfmBOoqq2xDjKwaxhvfikbsA8qcpWUXvowqSFAa0fttLPgqUeeFJ-1DF
+url = https://demxanh.com/dem-bon-mua-olympia-massage-vai-gam-xop.html
 
 [everonminhkhai.com]
 match = -26.7%%
