--- a/images/chieu-cay-cao-bang-a-15/config.ini
+++ b/images/chieu-cay-cao-bang-a-15/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-15.html
 lastopen = 2024-06-09 22:30:31
 
 [search]
-lastsearch = 2024-07-31 23:20:03
+lastsearch = 2024-08-01 01:18:22
 
 [demxanh.com]
 match = -39.1%%
 title = Bảng giá chiếu trúc Cao Bằng Cao Sơn mới nhất 2024
-url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-cao-son-moi-nhat-2019.html?srsltid=AfmBOopOOs8D1X6A_N0agFxEZoeaSjg3oyRjGQ_nE3by9NInFq4lXS9p
+url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-cao-son-moi-nhat-2019.html
 
 [www.diepxuan.com]
 match = 26.1%%
 title = Chiếu cây Cao Bằng A 150x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-a-150x190.html?srsltid=AfmBOoqmddDgWejcdHMkJVqO24dUfrRpTrV99tuIzPuakydY2IRS56Qa
+url = https://www.diepxuan.com/chieu-cay-cao-bang-a-150x190.html
 
 [uannga.vn]
 match = 56.5%%
