--- a/images/ga-phu-es1804-160x200/config.ini
+++ b/images/ga-phu-es1804-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-phu-es1804-160x200.html
 lastopen = 2024-07-01 16:45:20
 
 [search]
-lastsearch = 2024-07-31 19:39:25
+lastsearch = 2024-08-01 01:22:28
 
 [everonvn.com.vn]
 match = -133.3%%
 title = Bảng giá bán bộ chăn ga gối Everon Es1807 - Serenity màu ...
-url = https://everonvn.com.vn/everon/611/bo-everon-es1807?srsltid=AfmBOorxkx4gdVnMXZ2IB6c6sUBURS7UiMI0oV3KFblkljd3HXdDFE9m
+url = https://everonvn.com.vn/everon/611/bo-everon-es1807
 
 [www.everonqb.com]
 match = -66.7%%
@@ -22,9 +22,9 @@ title = Ga phủ ESM20013 180x200 - Điệp Xuân
 url = https://www.diepxuan.com/ga-phu-esm20013-180x200.html
 
 [muathongminh.vn]
-match = -66.7%%
-title = Bộ chăn bốn mùa ga phủ vỏ gối EVERON ESM21011
-url = https://muathongminh.vn/bo-chan-bon-mua-ga-phu-vo-goi-everon-esm21011-p.1__5442067327__7352455
+match = -123.8%%
+title = Lịch sử giá Bộ ga phủ everon esm-21012 - đang giảm 150.000 ...
+url = https://muathongminh.vn/bo-ga-phu-esm-21012-01-ga-phu-02-vo-goi-45cmx65cm-01-vo-chan-dong-2mx2m2-p.1__7745632717__40934475
 
 [beecost.vn]
 match = -61.9%%
