--- a/images/man-tu-bung-20-22/config.ini
+++ b/images/man-tu-bung-20-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-20-22.html
 lastopen = 2024-06-09 23:31:04
 
 [search]
-lastsearch = 2024-07-31 22:52:11
+lastsearch = 2024-08-01 01:22:49
 
 [www.bible.com]
 match = 23.1%%
@@ -17,9 +17,9 @@ title = Exodus 1-40 - Mizo BIBle - WordPress.com
 url = https://mizobibleblog.wordpress.com/2017/02/24/exodus-1-40/
 
 [www.biblegateway.com]
-match = -147.1%%
-title = Matthew 20:22-24 NIV - “You don't know what you are
-url = https://www.biblegateway.com/passage/?search=Matthew 20:22-24&version=NIV
+match = -129.4%%
+title = Matthew 20:22 NIV - “You don't know what you are
+url = https://www.biblegateway.com/passage/?search=Matthew 20:22&version=NIV
 
 [mungchup.com]
 match = -100.0%%
@@ -47,8 +47,8 @@ title = Air Fittings & Tubing
 url = https://www.smcpneumatics.com/pdfs/smc/70aifittings.pdf
 
 [www.bibleref.com]
-match = 0.0%%
-title = 
+match = -23.5%%
+title = What does Matthew 20:22 mean?
 url = https://www.bibleref.com/Matthew/20/Matthew-20-22.html
 
 [www.youtube.com]
