--- a/images/tui-singapore-150x190x09/config.ini
+++ b/images/tui-singapore-150x190x09/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-singapore-150x190x09.html
 lastopen = 2024-06-17 10:41:24
 
 [search]
-lastsearch = 2024-07-31 23:47:30
+lastsearch = 2024-08-01 01:20:00
 
 [www.diepxuan.com]
 match = 5.3%%
 title = Túi nệm - Điệp Xuân
-url = https://www.diepxuan.com/nem-bong/tui-nem.html?srsltid=AfmBOopMABcQ5nSHzMuWLlIFhInetoSAZixi6Oh5B4Bb3oO4Y64zm4_f
+url = https://www.diepxuan.com/nem-bong/tui-nem.html
 
 [www.tui.co.uk]
 match = -58.3%%
